Update on resume New positios
NEw positios
and new organization of english and spanish version. Now they live within two sets of folders, one spanish one english
• removed phone number
• remove intagram since that is standup comedy now
• fix layout of resume entries so they read better in desktop and behave diferently in mobile.

--- a/html/english/Galaxy.html
+++ b/html/english/Galaxy.html
@@ -11,7 +11,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link type="text/css" href="https://unpkg.com/image-compare-viewer/dist/image-compare-viewer.min.css">
 
   <!--[if lt IE 9]>
@@ -20,7 +20,7 @@
     <![endif]-->
 
   <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.png">
+  <link rel="shortcut icon" href="/img/favico.png">
 
   <!-- Font icons -->
   <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css">
@@ -61,7 +61,7 @@
         style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(110%) translateZ(0px);">
         <div class="midnightInner"
           style="position: absolute; overflow: auto; inset: 0px; transform: translateY(-110%) translateZ(0px);">
-          <a href="home.html" class="logo float-left"></a>
+          <a href="/html/english/home.html" class="logo float-left"></a>
           <div class="menu float-right">
             <div class="nav-icon">
               <span></span>
@@ -75,7 +75,7 @@
         style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(0%) translateZ(0px);">
         <div class="midnightInner"
           style="position: absolute; overflow: auto; inset: 0px; transform: translateY(0%) translateZ(0px);">
-          <a href="home.html" class="logo float-left"></a>
+          <a href="/html/english/home.html" class="logo float-left"></a>
           <div class="menu float-right">
             <div class="nav-icon">
               <span></span>
@@ -89,7 +89,7 @@
         style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(110%) translateZ(0px);">
         <div class="midnightInner"
           style="position: absolute; overflow: auto; inset: 0px; transform: translateY(-110%) translateZ(0px);">
-          <a href="home.html" class="logo float-left"></a>
+          <a href="/html/english/home.html" class="logo float-left"></a>
           <div class="menu float-right">
             <div class="nav-icon">
               <span></span>
@@ -107,22 +107,22 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="home.html#portfolio">Portfolio</a>
+              <a href="html/english/home.html#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="home.html#about">About</a>
+              <a href="/html/english/home.html#about">About</a>
             </li>
             <li class="scroll">
-              <a href="home.html#resume">Resume</a>
+              <a href="/html/english/home.html#resume">Resume</a>
             </li>
             <li class="scroll">
-              <a href="home.html#contact">Contact Information</a>
+              <a href="home.html#contact">Contact</a>
             </li>
             <li class="scroll">
-              <a href="es.html">Website en Español</a>
+              <a href="/html/spanish/home.html">Español</a>
             </li>
           </ul>
         </div>
@@ -185,7 +185,7 @@
             style="fill:none;stroke:#F2F2F2;stroke-width:20px;"></path>
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/Galaxy/Hero-Image-Galaxy.png);opacity: 1;">
+      <div class="hero-image" style="background-image: url(/img/works/Galaxy/Hero-Image-Galaxy.png);opacity: 1;">
       </div>
     </div>
 
@@ -231,8 +231,8 @@
         </div>
 
         <div class="col-lg-9">
-          <img class="image bottom_30 round-corners" src="img/works/Galaxy/Will-Smith-in-Men-in-Black-noisy-cricket.png"
-            alt="Will-Smith">
+          <img class="image bottom_30 round-corners"
+            src="/img/works/Galaxy/Will-Smith-in-Men-in-Black-noisy-cricket.png" alt="Will-Smith">
         </div>
         <div class="container project-detail top_30 bottom_60 col-lg-8 offset-lg-2">
           <h2 class="title white-text text-center">Creating a RMS for MIB</h2>
@@ -261,7 +261,7 @@
       <div class="container project-detail ">
         <div class="row lightbox-gallery bottom_60">
           <div class="image col-lg-2 offset-lg-5 col-md-2 offset-md-5">
-            <img src="img/works/Galaxy/Step_1.svg" alt="Step One">
+            <img src="/img/works/Galaxy/Step_1.svg" alt="Step One">
           </div>
         </div>
         <div class="row">
@@ -275,7 +275,7 @@
         <div class="row lightbox-gallery justify-content-center">
           <div class="col-lg-3">
             <div class="image">
-              <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
+              <img src="/img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
             </div>
             <h2 class="subtitle white-text bottom_30">Assignee</h2>
             <p class="grey-text">In the field things can get tragic pretty quickly. Some people
@@ -289,12 +289,12 @@
               everytime one knocks
               at a stranger's door.</p>
             <div class="image top_30">
-              <img src="img/works/Galaxy/Users/Assignee-Workflow-1.svg" alt="Request Worflow">
+              <img src="/img/works/Galaxy/Users/Assignee-Workflow-1.svg" alt="Request Worflow">
             </div>
           </div>
           <div class="col-lg-3">
             <div class="image">
-              <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
+              <img src="/img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
             </div>
             <h2 class="subtitle white-text bottom_30">Supervisor</h2>
             <p class="grey-text">My peeps on the field are putting their life on the
@@ -309,12 +309,12 @@
               some money so
               be it.</p>
             <div class="image top_30">
-              <img src="img/works/Galaxy/Users/Supervisor-Workflow-2.svg" alt="Request Worflow">
+              <img src="/img/works/Galaxy/Users/Supervisor-Workflow-2.svg" alt="Request Worflow">
             </div>
           </div>
           <div class="col-lg-3">
             <div class="image">
-              <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
+              <img src="/img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
             </div>
             <h2 class="subtitle white-text bottom_30">CFO</h2>
             <p class="grey-text">I am the money guy, in my eyes some people in the field think
@@ -329,7 +329,7 @@
               trouble not
               them!</p>
             <div class="image top_30">
-              <img src="img/works/Galaxy/Users/CFO-Workflow-3.svg" alt="Request Worflow">
+              <img src="/img/works/Galaxy/Users/CFO-Workflow-3.svg" alt="Request Worflow">
             </div>
           </div>
         </div>
@@ -347,7 +347,7 @@
         <div class="container project-detail">
           <div class="row lightbox-gallery bottom_60">
             <div class="image col-lg-2 offset-lg-5 col-md-2 offset-md-5">
-              <img src="img/works/Galaxy/Step_2.svg" alt="Step Two">
+              <img src="/img/works/Galaxy/Step_2.svg" alt="Step Two">
             </div>
           </div>
           <div class="row">
@@ -369,7 +369,7 @@
             <!-- a image -->
             <div class="col-lg-5 offset-1">
               <div class="image bottom_60">
-                <img class="round-corners" src="img/works/Galaxy/Screens/New-Request-Low-Fidelity.png"
+                <img class="round-corners" src="/img/works/Galaxy/Screens/New-Request-Low-Fidelity.png"
                   alt="New Request Low Fidelity">
               </div>
             </div>
@@ -382,7 +382,7 @@
             <!-- a image -->
             <div class="col-lg-5 offset-lg-1">
               <div class="image bottom_60">
-                <img class="round-corners" src="img/works/Galaxy/Screens/Security-Ledger-Low-Fidelity.png"
+                <img class="round-corners" src="/img/works/Galaxy/Screens/Security-Ledger-Low-Fidelity.png"
                   alt="Request Ledger">
               </div>
             </div>
@@ -420,7 +420,7 @@
           </div>
         </div>
         <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-          <img class="image" src="img/works/Galaxy/Screens/V-2/LOGIN-SCREEN.png" alt="Log In">
+          <img class="image" src="/img/works/Galaxy/Screens/V-2/LOGIN-SCREEN.png" alt="Log In">
         </div>
       </div>
     </section>
@@ -448,12 +448,12 @@
               data-items-tablet-small="1">
 
               <div class="item">
-                <img class="d-block w-100 round-corners" src="img/works/Galaxy/Screens/V-2/Facility-Profile.svg"
+                <img class="d-block w-100 round-corners" src="/img/works/Galaxy/Screens/V-2/Facility-Profile.svg"
                   alt="Dark Theme" />
               </div>
               <div class="item">
 
-                <img class="d-block w-100 round-corners" src="img/works/Galaxy/Screens/V-2/Light-Theme.svg"
+                <img class="d-block w-100 round-corners" src="/img/works/Galaxy/Screens/V-2/Light-Theme.svg"
                   alt="Light Theme" />
               </div>
 
@@ -480,7 +480,7 @@
           <!-- a image -->
           <div class="col-lg-10 offset-lg-1">
             <div class="image bottom_60">
-              <img class="round-corners" src="img/works/Galaxy/Screens/V-2/New-Request.png" alt="New Request">
+              <img class="round-corners" src="/img/works/Galaxy/Screens/V-2/New-Request.png" alt="New Request">
             </div>
           </div>
         </div>
@@ -499,7 +499,7 @@
           <!-- a image -->
           <div class="col-lg-10 offset-lg-1">
             <div class="image bottom_60">
-              <img class="round-corners" src="img/works/Galaxy/Screens/V-2/Request-Ledger.png" alt="Request Ledger">
+              <img class="round-corners" src="/img/works/Galaxy/Screens/V-2/Request-Ledger.png" alt="Request Ledger">
             </div>
           </div>
         </div>
@@ -509,7 +509,7 @@
           <!-- a image -->
           <div class="col-lg-10 offset-lg-1">
             <div class="image">
-              <img class="round-corners" src="img/works/Galaxy/Screens/V-2/Received-Request.png" alt="Approve/Deny">
+              <img class="round-corners" src="/img/works/Galaxy/Screens/V-2/Received-Request.png" alt="Approve/Deny">
             </div>
           </div>
         </div>
@@ -520,7 +520,7 @@
     <section data-midnight="dark" class="galaxy-bg-purple-gradient container lightbox-gallery" id="three">
       <div class="row lightbox-gallery">
         <div class="image col-lg-2 offset-lg-5 col-md-2 offset-md-5">
-          <img src="img/works/Galaxy/Step_3.svg" alt="Step Three">
+          <img src="/img/works/Galaxy/Step_3.svg" alt="Step Three">
         </div>
       </div>
       <div class="row">
@@ -530,7 +530,7 @@
       </div>
 
       <div class="col-lg-4 offset-lg-4 col-sm-4 offset-sm-4 image">
-        <img src="img/works/Galaxy/GALAXY-LOGO.svg" alt="Logo">
+        <img src="/img/works/Galaxy/GALAXY-LOGO.svg" alt="Logo">
       </div>
     </section>
     <section data-midnight="dark" class="project-detail galaxy-bg-to-black lightbox-gallery">
@@ -538,11 +538,11 @@
         <h2 class="text title white-text text-center">Colors</h2>
       </div>
       <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-        <img src="img/works/Galaxy/Galaxy-Secondary-Colors.svg" alt="Logo">
+        <img src="/img/works/Galaxy/Galaxy-Secondary-Colors.svg" alt="Logo">
         <p class="text-center white-text top_15">Secondary</p>
       </div>
       <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-        <img src="img/works/Galaxy/Galaxy-Primary-Colors.svg" alt="Logo">
+        <img src="/img/works/Galaxy/Galaxy-Primary-Colors.svg" alt="Logo">
         <p class="text-center white-text top_15">Primary</p>
       </div>
     </section>
@@ -551,7 +551,7 @@
         <h2 class="text title white-text text-center">Typography</h2>
       </div>
       <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-        <img src="img/works/Galaxy/Ezzo-Font-Family.svg" alt="Ezzo Font Family">
+        <img src="/img/works/Galaxy/Ezzo-Font-Family.svg" alt="Ezzo Font Family">
         <p class="text-center white-text top_15">Ezzo font family</p>
       </div>
     </section>
@@ -560,7 +560,7 @@
         <h2 class="text title text-center">Iconography</h2>
       </div>
       <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-        <img src="img/works/Galaxy/Icons-for-Galaxy.svg" alt="Icons">
+        <img src="/img/works/Galaxy/Icons-for-Galaxy.svg" alt="Icons">
         <p class="text-center white-text top_15">Ezzo font family</p>
       </div>
     </section>
@@ -569,7 +569,7 @@
         <h2 class="white-text title text-center">UI components</h2>
       </div>
       <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-        <img src="img/works/Galaxy/UI-Components.svg" alt="Dark UI Components">
+        <img src="/img/works/Galaxy/UI-Components.svg" alt="Dark UI Components">
       </div>
     </section>
     <section data-midnight="dark" class="galaxy-bg-to-black">
@@ -582,7 +582,7 @@
           <!-- a image -->
           <div class="col-lg-10 offset-lg-1">
             <div class="image top_60">
-              <img class="round-corners" src="img/works/Galaxy/Screens/V-2/Individual-Profile.png"
+              <img class="round-corners" src="/img/works/Galaxy/Screens/V-2/Individual-Profile.png"
                 alt="Profile of a villain">
             </div>
           </div>
@@ -643,16 +643,11 @@
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-          </div>
           <div class="col-lg-2 bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
@@ -668,9 +663,9 @@
 
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
