--- a/html/english/Gallo-Guapo.html
+++ b/html/english/Gallo-Guapo.html
@@ -12,7 +12,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 
   <!--[if lt IE 9]>
         <span src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></span>
@@ -20,7 +20,7 @@
       <![endif]-->
 
   <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.png">
+  <link rel="shortcut icon" href="/img/favico.png">
 
   <!-- Font icons -->
   <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css">
@@ -63,7 +63,7 @@
         style="position: absolute; overflow: hidden; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(110%) translateZ(0px);">
         <div class="midnightInner"
           style="position: absolute; overflow: auto; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(-110%) translateZ(0px);">
-          <a href="home.html" class="logo float-left"></a>
+          <a href="/html/english/home.html" class="logo float-left"></a>
           <div class="menu float-right">
             <div class="nav-icon">
               <span></span>
@@ -77,7 +77,7 @@
         style="position: absolute; overflow: hidden; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(0%) translateZ(0px);">
         <div class="midnightInner"
           style="position: absolute; overflow: auto; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(0%) translateZ(0px);">
-          <a href="home.html" class="logo float-left"></a>
+          <a href="/html/english/home.html" class="logo float-left"></a>
           <div class="menu float-right">
             <div class="nav-icon">
               <span></span>
@@ -95,19 +95,19 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="home.html#portfolio">Portfolio</a>
+              <a href="html/english/home.html#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="home.html#about">About</a>
+              <a href="/html/english/home.html#about">About</a>
             </li>
             <li class="scroll">
-              <a href="home.html#resume">Resume</a>
+              <a href="/html/english/home.html#resume">Resume</a>
             </li>
             <li class="scroll">
-              <a href="home.html#contact">Contact Information</a>
+              <a href="home.html#contact">Contact</a>
             </li>
             <li class="scroll">
               <a href="es.html">Español</a>
@@ -162,7 +162,7 @@
             style="fill:none;stroke:#F2F2F2;stroke-width:20px;"></path>
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/work-5/Foodtruck-Gallo-Guapo-Cover.png);"></div>
+      <div class="hero-image" style="background-image: url(/img/works/work-5/Foodtruck-Gallo-Guapo-Cover.png);"></div>
     </div>
     <!-- Hero Section - End ================================================== -->
     <!-- Work Content ================================================== -->
@@ -172,25 +172,25 @@
         <!-- a image -->
         <div class="col-lg-12">
           <div class="image">
-            <img src="img/works/work-5/Wall-Design-Illustration-Restaurant.jpg" alt="Illustration">
+            <img src="/img/works/work-5/Wall-Design-Illustration-Restaurant.jpg" alt="Illustration">
           </div>
         </div>
         <!-- a image -->
         <div class="col-lg-6">
           <div class="image">
-            <img src="img/works/work-5/Poster-Gallo-Guapo-Restaurant-1.jpg" alt="Poster Design">
+            <img src="/img/works/work-5/Poster-Gallo-Guapo-Restaurant-1.jpg" alt="Poster Design">
           </div>
         </div>
         <div class="col-lg-6">
           <div class="image">
-            <img src="img/works/work-5/Stationary-Group-Restaurant-Gallo-Guapo.jpg" alt="Branding on stationary">
+            <img src="/img/works/work-5/Stationary-Group-Restaurant-Gallo-Guapo.jpg" alt="Branding on stationary">
           </div>
         </div>
 
         <!-- a image -->
         <div class="col-lg-12">
           <div class="image">
-            <img src="img/works/work-5/LOGO-Signature-Gallo-Guapo-Restaurant.jpg" alt="Logo">
+            <img src="/img/works/work-5/LOGO-Signature-Gallo-Guapo-Restaurant.jpg" alt="Logo">
           </div>
         </div>
         <!-- a image -->
@@ -198,7 +198,7 @@
         <!-- a image -->
         <div class="col-lg-6">
           <div class="image">
-            <img src="img/works/work-5/Apron-Restaurant-Gallo-Guapo-1.jpg" alt="Apron Branding">
+            <img src="/img/works/work-5/Apron-Restaurant-Gallo-Guapo-1.jpg" alt="Apron Branding">
           </div>
         </div>
         <!-- a image -->
@@ -207,14 +207,14 @@
         <!-- a image -->
         <div class="col-lg-6">
           <div class="image">
-            <img src="img/works/work-5/Poster-Gallo-Guapo-Restaurant-2.jpg" alt="Poster Design">
+            <img src="/img/works/work-5/Poster-Gallo-Guapo-Restaurant-2.jpg" alt="Poster Design">
           </div>
         </div>
 
         <!-- a image -->
         <div class="col-lg-12">
           <div class="image">
-            <img src="img/works/work-5/Wall-Gallo-Guapo-Restaurant.jpg" alt="Restaurant Branding">
+            <img src="/img/works/work-5/Wall-Gallo-Guapo-Restaurant.jpg" alt="Restaurant Branding">
           </div>
         </div>
         <!-- a image -->
@@ -222,12 +222,12 @@
         <!-- a image -->
         <div class="col-lg-12">
           <div class="image">
-            <img src="img/works/work-5/Foodtruck-Back-GalloGuapo.jpg" alt="Food truck branding">
+            <img src="/img/works/work-5/Foodtruck-Back-GalloGuapo.jpg" alt="Food truck branding">
           </div>
         </div>
         <div class="col-lg-12">
           <div class="image">
-            <img src="img/works/work-5/Stationary-restaurant-gallo-guapo.jpg" alt="All branded items">
+            <img src="/img/works/work-5/Stationary-restaurant-gallo-guapo.jpg" alt="All branded items">
           </div>
         </div>
         <!-- a image -->
@@ -244,29 +244,25 @@
 
     </section>
 
-    <!-- footer -->
-    <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+    <!-- footer Desktop Start -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contact Information</h2>
+            <h2 class="white-text subtitle bottom_30">Contact</h2>
           </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-          </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
-                aria-hidden="true"></i> </a>
           </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <p class="white-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
@@ -274,14 +270,43 @@
       </div>
       </div>
     </footer>
+    <!-- footer Desktop End-->
+
+    <!-- footer Mobile Start -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
+      <div class="container project-detail padtop_15">
+        <div class="row lightbox-gallery">
+          <div class="col-lg-4">
+            <h2 class="white-text subtitle bottom_30">Contact</h2>
+          </div>
+          <div class="col-lg-2 bottom_30">
+            <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
+          </div>
+          <div class="col-lg-2  bottom_30">
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
+                aria-hidden="true"></i> </a>
+          </div>
+          <div class="col-lg-2  bottom_30">
+            <p class="white-text">
+              &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </footer>
+    <!-- footer Mobile End-->
 
   </main>
 
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
