--- a/html/english/Racing-Extinction.html
+++ b/html/english/Racing-Extinction.html
@@ -10,7 +10,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -18,10 +18,10 @@
     <![endif]-->
 
   <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.ico" />
+  <link rel="shortcut icon" href="/img/favico.ico" />
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet" />
@@ -53,7 +53,7 @@
     <!-- Header
 ================================================== -->
     <header>
-      <a href="home.html" class="logo float-left"></a>
+      <a href="/html/english/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -69,22 +69,22 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="home.html#portfolio">Portfolio</a>
+              <a href="html/english/home.html#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="home.html#about">About</a>
+              <a href="/html/english/home.html#about">About</a>
             </li>
             <li class="scroll">
-              <a href="home.html#resume">Resume</a>
+              <a href="/html/english/home.html#resume">Resume</a>
             </li>
             <li class="scroll">
-              <a href="home.html#contact">Contact Information</a>
+              <a href="home.html#contact">Contact</a>
             </li>
             <li class="scroll">
-              <a href="es.html">Website en Español</a>
+              <a href="/html/spanish/home.html">Español</a>
             </li>
           </ul>
         </div>
@@ -124,7 +124,7 @@
             style="fill: none; stroke: #f2f2f2; stroke-width: 20px;" />
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/work-3/work-3-bkgrd.png);"></div>
+      <div class="hero-image" style="background-image: url(/img/works/work-3/work-3-bkgrd.png);"></div>
     </div>
     <!-- Hero Section - End
 ================================================== -->
@@ -167,25 +167,25 @@
           <!-- a image -->
           <div class="col-lg-12 bottom_60">
             <div class="image">
-              <img class="round-corners" src="img/works/work-3/Paradise-Flycatcher-1.png" alt="" />
+              <img class="round-corners" src="/img/works/work-3/Paradise-Flycatcher-1.png" alt="" />
             </div>
           </div>
           <!-- a image -->
           <div class="col-lg-12 bottom_60">
             <div class="image">
-              <img class="round-corners" class="round-corners" src="img/works/work-3/Gibbon.jpg" alt="" />
+              <img class="round-corners" class="round-corners" src="/img/works/work-3/Gibbon.jpg" alt="" />
             </div>
           </div>
           <!-- a image -->
           <div class="col-lg-12 bottom_60">
             <div class="image">
-              <img class="round-corners" src="img/works/work-3/Cheetah.png" alt="" />
+              <img class="round-corners" src="/img/works/work-3/Cheetah.png" alt="" />
             </div>
           </div>
           <!-- a image -->
           <div class="col-lg-12">
             <div class="image">
-              <img class="round-corners" src="img/works/work-3/Green-Turtle.png" alt="" />
+              <img class="round-corners" src="/img/works/work-3/Green-Turtle.png" alt="" />
             </div>
           </div>
         </div>
@@ -198,13 +198,13 @@
         data-dots="true" data-items-desktop="1" data-items-desktop-small="1" data-items-tablet="1"
         data-items-tablet-small="1">
         <div class="item lightgrey-bg">
-          <img class="mutiply-blend-mode" src="img/works/work-3/Gibbons.jpg" alt="" />
+          <img class="mutiply-blend-mode" src="/img/works/work-3/Gibbons.jpg" alt="" />
         </div>
         <div class="item lightgrey-bg">
-          <img class="mutiply-blend-mode" src="img/works/work-3/Green-Turtle.jpg" alt="" />
+          <img class="mutiply-blend-mode" src="/img/works/work-3/Green-Turtle.jpg" alt="" />
         </div>
         <div class="item lightgrey-bg">
-          <img class="mutiply-blend-mode" src="img/works/work-3/Paradise-Flycatcher.jpg" alt="" />
+          <img class="mutiply-blend-mode" src="/img/works/work-3/Paradise-Flycatcher.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -219,29 +219,25 @@
       </div>
     </section>
 
-    <!-- footer -->
-    <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+    <!-- footer Desktop Start -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contact Information</h2>
+            <h2 class="white-text subtitle bottom_30">Contact</h2>
           </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-          </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
-                aria-hidden="true"></i> </a>
           </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <p class="white-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
@@ -249,12 +245,41 @@
       </div>
       </div>
     </footer>
+    <!-- footer Desktop End-->
+
+    <!-- footer Mobile Start -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
+      <div class="container project-detail padtop_15">
+        <div class="row lightbox-gallery">
+          <div class="col-lg-4">
+            <h2 class="white-text subtitle bottom_30">Contact</h2>
+          </div>
+          <div class="col-lg-2 bottom_30">
+            <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
+          </div>
+          <div class="col-lg-2  bottom_30">
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
+                aria-hidden="true"></i> </a>
+          </div>
+          <div class="col-lg-2  bottom_30">
+            <p class="white-text">
+              &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </footer>
+    <!-- footer Mobile End-->
   </main>
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
