--- a/html/english/UI-UX-Illustrations.html
+++ b/html/english/UI-UX-Illustrations.html
@@ -10,7 +10,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -18,10 +18,10 @@
     <![endif]-->
 
     <!-- FAVICON  -->
-    <link rel="shortcut icon" href="img/favico.ico" />
+    <link rel="shortcut icon" href="/img/favico.ico" />
 
     <!-- Font icons -->
-    <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet" />
@@ -53,7 +53,7 @@
         <!-- Header
 ================================================== -->
         <header>
-            <a href="home.html" class="logo float-left"></a>
+            <a href="/html/english/home.html" class="logo float-left"></a>
             <div class="menu float-right">
                 <div class="nav-icon">
                     <span></span>
@@ -69,22 +69,22 @@
                 <div class="menu-holder">
                     <ul class="navmenu">
                         <li class="scroll">
-                            <a href="home.html#portfolio">Portfolio</a>
+                            <a href="html/english/home.html#portfolio">Portfolio</a>
                         </li>
                         <li class="scroll">
                             <a href="https://peterverastegui.wordpress.com/">Blog</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#about">About</a>
+                            <a href="/html/english/home.html#about">About</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#resume">Resume</a>
+                            <a href="/html/english/home.html#resume">Resume</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#contact">Contact Information</a>
+                            <a href="home.html#contact">Contact</a>
                         </li>
                         <li class="scroll">
-                            <a href="es.html">Website en Español</a>
+                            <a href="/html/spanish/home.html">Español</a>
                         </li>
                     </ul>
                 </div>
@@ -126,7 +126,7 @@
                 </svg>
             </div>
             <div class="hero-image"
-                style="background-image: url(img/works/UI-UX-Illustration/UI-UX-Illustrations-Hero-Image.png);">
+                style="background-image: url(/img/works/UI-UX-Illustration/UI-UX-Illustrations-Hero-Image.png);">
             </div>
         </div>
         <!-- Hero Section - End
@@ -162,43 +162,43 @@
                     <!-- a image -->
                     <div class="col-lg-12 bottom_60">
                         <div class="image">
-                            <img class="round-corners" class="round-corners" src="img/works/UI-UX-Illustration/U-UI.png"
-                                alt="User Experience Illustration" />
+                            <img class="round-corners" class="round-corners"
+                                src="/img/works/UI-UX-Illustration/U-UI.png" alt="User Experience Illustration" />
                         </div>
                     </div>
                     <!-- a image -->
                     <div class="col-lg-12 bottom_60">
                         <div class="image">
-                            <img class="round-corners" class="round-corners" src="img/works/UI-UX-Illustration/X-UX.png"
-                                alt="User Experience Illustration" />
+                            <img class="round-corners" class="round-corners"
+                                src="/img/works/UI-UX-Illustration/X-UX.png" alt="User Experience Illustration" />
                         </div>
                     </div>
                     <!-- a image -->
                     <div class="col-lg-12 bottom_60">
                         <div class="image">
-                            <img class="round-corners" class="round-corners" src="img/works/UI-UX-Illustration/I-UI.png"
-                                alt="User Experience Illustration" />
+                            <img class="round-corners" class="round-corners"
+                                src="/img/works/UI-UX-Illustration/I-UI.png" alt="User Experience Illustration" />
                         </div>
                     </div>
                     <!-- a image -->
                     <div class="col-lg-12">
                         <div class="image  bottom_60">
-                            <img class="round-corners" class="round-corners" src="img/works/UI-UX-Illustration/U-UX.png"
-                                alt="User Experience Illustration" />
+                            <img class="round-corners" class="round-corners"
+                                src="/img/works/UI-UX-Illustration/U-UX.png" alt="User Experience Illustration" />
                         </div>
                     </div>
 
                     <!-- a image -->
                     <div class="col-lg-12 bottom_60">
                         <div class="image">
-                            <img class="round-corners" src="img/works/UI-UX-Illustration/UI.png"
+                            <img class="round-corners" src="/img/works/UI-UX-Illustration/UI.png"
                                 alt="User Interface Illustration" />
                         </div>
                     </div>
                     <!-- a image -->
                     <div class="col-lg-12">
                         <div class="image">
-                            <img class="round-corners" class="round-corners" src="img/works/UI-UX-Illustration/UX.png"
+                            <img class="round-corners" class="round-corners" src="/img/works/UI-UX-Illustration/UX.png"
                                 alt="User Experience Illustration" />
                         </div>
                     </div>
@@ -215,31 +215,28 @@
             </div>
         </section>
 
-        <!-- footer -->
-        <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+        <!-- footer Desktop Start -->
+        <footer id="contact" data-midnight="dark"
+            class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
             <div class="container project-detail padtop_15">
                 <div class="row lightbox-gallery">
                     <div class="col-lg-4">
-                        <h2 class="white-text subtitle bottom_30">Contact Information</h2>
+                        <h2 class="white-text subtitle bottom_30">Contact</h2>
                     </div>
-                    <div class="col-lg-2 bottom_30">
+                    <div class="col bottom_30">
                         <a href="mailto:verastegui.peter@gmail.com?Subject=Hello"
                             target="_blank">verastegui.peter@gmail.com</a>
                     </div>
-                    <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-                        <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-                    </div>
-                    <div class="col-lg-2 bottom_30">
+                    <div class="col bottom_30">
                         <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
                                 aria-hidden="true"></i> </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;
+                        <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
+                        </a>
                         &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
                                 class="fab fa-pinterest" aria-hidden="true"></i> </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i
-                                class="fab fa-instagram" aria-hidden="true"></i> </a>
                     </div>
-                    <div class="col-lg-2 bottom_30">
+                    <div class="col bottom_30">
                         <p class="white-text">
                             &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
                     </div>
@@ -247,12 +244,44 @@
             </div>
             </div>
         </footer>
+        <!-- footer Desktop End-->
+
+        <!-- footer Mobile Start -->
+        <footer id="contact" data-midnight="dark"
+            class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
+            <div class="container project-detail padtop_15">
+                <div class="row lightbox-gallery">
+                    <div class="col-lg-4">
+                        <h2 class="white-text subtitle bottom_30">Contact</h2>
+                    </div>
+                    <div class="col-lg-2 bottom_30">
+                        <a href="mailto:verastegui.peter@gmail.com?Subject=Hello"
+                            target="_blank">verastegui.peter@gmail.com</a>
+                    </div>
+                    <div class="col-lg-2  bottom_30">
+                        <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
+                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;
+                        <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
+                        </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
+                                class="fab fa-pinterest" aria-hidden="true"></i> </a>
+                    </div>
+                    <div class="col-lg-2  bottom_30">
+                        <p class="white-text">
+                            &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </footer>
+        <!-- footer Mobile End-->
     </main>
 
     <!-- Javascripts -->
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
     <script type="text/javascript">
         var currentYear = new Date().getFullYear();
         document.getElementById("copyYear").innerHTML = currentYear;
