--- a/html/english/USA-Today.html
+++ b/html/english/USA-Today.html
@@ -12,7 +12,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -20,10 +20,10 @@
     <![endif]-->
 
   <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.ico" />
+  <link rel="shortcut icon" href="/img/favico.ico" />
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet" />
@@ -55,7 +55,7 @@
     <!-- Header
 ================================================== -->
     <header>
-      <a href="home.html" class="logo float-left"></a>
+      <a href="/html/english/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -71,22 +71,22 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="home.html#portfolio">Portfolio</a>
+              <a href="/html/english/home.html">Portfolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="home.html#about">About</a>
+              <a href="/html/english/home.html#about">About</a>
             </li>
             <li class="scroll">
-              <a href="home.html#clients">Clients</a>
+              <a href="/html/english/home.html#resume">Resume</a>
             </li>
             <li class="scroll">
-              <a href="home.html#contact">Contact Information</a>
+              <a href="home.html#contact">Contact</a>
             </li>
             <li class="scroll">
-              <a href="es.html">Website en Español</a>
+              <a href="/html/spanish/home.html">Español</a>
             </li>
           </ul>
         </div>
@@ -126,7 +126,7 @@
             style="fill: none; stroke: #f2f2f2; stroke-width: 20px;" />
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/work-1/work-1-bkgrd.jpg);"></div>
+      <div class="hero-image" style="background-image: url(/img/works/work-1/work-1-bkgrd.jpg);"></div>
     </div>
     <!-- Hero Section - End
 ================================================== -->
@@ -174,7 +174,7 @@
             <!-- a image -->
             <div class="col-lg-10 offset-lg-1">
               <div class="image">
-                <img src="img/works/work-1/Colors-National-Market.png" alt="Colors" />
+                <img src="/img/works/work-1/Colors-National-Market.png" alt="Colors" />
               </div>
             </div>
           </div>
@@ -187,7 +187,7 @@
 
     <div data-midnight="white" class="row lightbox-gallery">
       <div class="image">
-        <img src="img/works/work-1/City-Map-Local-Element.png" alt="city map" />
+        <img src="/img/works/work-1/City-Map-Local-Element.png" alt="city map" />
       </div>
     </div>
     <!-- One Column - centered image bleeding - full screen | End  -->
@@ -196,7 +196,7 @@
     <section data-midnight="dark" class="usatoday-blue">
       <div class="lightbox-gallery container">
         <div class="image col-lg-4 offset-lg-4 col-sm-6 offset-sm-3">
-          <img src="img/works/work-1/Linear-Elements.png" alt="New elements" />
+          <img src="/img/works/work-1/Linear-Elements.png" alt="New elements" />
         </div>
       </div>
     </section>
@@ -259,18 +259,18 @@
       <!-- project-detail Two Columns | Start -->
       <div class="lightbox-gallery row no-gutter">
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-National-Intro-1080x1080-Opener.jpg"
+          <img class="round-corners" src="/img/works/work-1/USATODAY-National-Intro-1080x1080-Opener.jpg"
             alt="New elements" />
         </div>
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-National-Name-Title-1080x1080.jpg"
+          <img class="round-corners" src="/img/works/work-1/USATODAY-National-Name-Title-1080x1080.jpg"
             alt="New elements" />
         </div>
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-National-Audio-1080x1080.jpg" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/USATODAY-National-Audio-1080x1080.jpg" alt="New elements" />
         </div>
         <div class="image col-lg-3">
-          <img class="round-corners" src="img/works/work-1/USATODAY-National-Text-Boxes-1080x1080.jpg"
+          <img class="round-corners" src="/img/works/work-1/USATODAY-National-Text-Boxes-1080x1080.jpg"
             alt="New elements" />
         </div>
       </div>
@@ -279,17 +279,17 @@
       <!-- project-detail Two Columns | Start -->
       <div class="row lightbox-gallery no-gutter top_15">
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-Local-Intro-1080x1080.png" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/USATODAY-Local-Intro-1080x1080.png" alt="New elements" />
         </div>
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-Local-Outroa-1080x1080.png" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/USATODAY-Local-Outroa-1080x1080.png" alt="New elements" />
         </div>
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-National-Outro-1080x10800-2.png"
+          <img class="round-corners" src="/img/works/work-1/USATODAY-National-Outro-1080x10800-2.png"
             alt="New elements" />
         </div>
         <div class="image col-lg-3">
-          <img class="round-corners" src="img/works/work-1/USATODAY-Local-NameTitle-1080x10802.jpg"
+          <img class="round-corners" src="/img/works/work-1/USATODAY-Local-NameTitle-1080x10802.jpg"
             alt="New elements" />
         </div>
       </div>
@@ -310,7 +310,7 @@
             <!-- a image -->
             <div class="col-lg-12">
               <div class="image">
-                <img src="img/works/work-1/Video-Structure-2.png" alt="Colors" />
+                <img src="/img/works/work-1/Video-Structure-2.png" alt="Colors" />
               </div>
             </div>
           </div>
@@ -326,7 +326,7 @@
           <!-- a image -->
           <div class="col-lg-12">
             <div class="image">
-              <img src="img/works/work-1/Social-media-grid.png" alt="grid" />
+              <img src="/img/works/work-1/Social-media-grid.png" alt="grid" />
             </div>
           </div>
         </div>
@@ -338,13 +338,13 @@
       <!-- Three colums - one row | Start -->
       <div class="row lightbox-gallery no-gutter">
         <div class="image col-lg-4 bottom_15">
-          <img class="round-corners" src="img/works/work-1/Outro-options-2.gif" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/Outro-options-2.gif" alt="New elements" />
         </div>
         <div class="image col-lg-4 bottom_15">
-          <img class="round-corners" src="img/works/work-1/Outro-option-5.gif" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/Outro-option-5.gif" alt="New elements" />
         </div>
         <div class="image col-lg-4 bottom_15">
-          <img class="round-corners" src="img/works/work-1/Outro-option-3.gif" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/Outro-option-3.gif" alt="New elements" />
         </div>
       </div>
     </div>
@@ -356,7 +356,7 @@
 
     <!-- ====Full Screen IMG ===-->
     <div data-midnight="white">
-      <img class="img-fluid col align-self-center p-0" src="img/works/work-1/Social-Video-Styleguide.png"
+      <img class="img-fluid col align-self-center p-0" src="/img/works/work-1/Social-Video-Styleguide.png"
         alt="Social video styleguide">
     </div>
     <!-- ====Full Screen IMG ===-->
@@ -370,29 +370,25 @@
       </div>
     </section>
 
-    <!-- footer -->
-    <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+    <!-- footer Desktop Start -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contact Information</h2>
+            <h2 class="white-text subtitle bottom_30">Contact</h2>
           </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-          </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
-                aria-hidden="true"></i> </a>
           </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <p class="white-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
@@ -400,11 +396,40 @@
       </div>
       </div>
     </footer>
+    <!-- footer Desktop End-->
+
+    <!-- footer Mobile Start -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
+      <div class="container project-detail padtop_15">
+        <div class="row lightbox-gallery">
+          <div class="col-lg-4">
+            <h2 class="white-text subtitle bottom_30">Contact</h2>
+          </div>
+          <div class="col-lg-2 bottom_30">
+            <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
+          </div>
+          <div class="col-lg-2  bottom_30">
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
+                aria-hidden="true"></i> </a>
+          </div>
+          <div class="col-lg-2  bottom_30">
+            <p class="white-text">
+              &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </footer>
+    <!-- footer Mobile End-->
   </main>
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
