--- a/html/english/toucan-template.html
+++ b/html/english/toucan-template.html
@@ -11,7 +11,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -19,10 +19,10 @@
     <![endif]-->
 
     <!-- FAVICON  -->
-    <link rel="shortcut icon" href="img/favico.png">
+    <link rel="shortcut icon" href="/img/favico.png">
 
     <!-- Font icons -->
-    <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -61,7 +61,7 @@
 
         <!-- Header -->
         <header>
-            <a href="home.html" class="logo float-left"></a>
+            <a href="/html/english/home.html" class="logo float-left"></a>
             <div class="menu float-right">
                 <div class="nav-icon">
                     <span></span>
@@ -77,22 +77,22 @@
                 <div class="menu-holder">
                     <ul class="navmenu">
                         <li class="scroll">
-                            <a href="home.html#portfolio">Portfolio</a>
+                            <a href="html/english/home.html#portfolio">Portfolio</a>
                         </li>
                         <li class="scroll">
                             <a href="https://peterverastegui.wordpress.com/">Blog</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#about">About</a>
+                            <a href="/html/english/home.html#about">About</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#resume">Resume</a>
+                            <a href="/html/english/home.html#resume">Resume</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#contact">Contact Information</a>
+                            <a href="home.html#contact">Contact</a>
                         </li>
                         <li class="scroll">
-                            <a href="es.html">Website en Español</a>
+                            <a href="/html/spanish/home.html">Español</a>
                         </li>
                     </ul>
                 </div>
@@ -129,7 +129,7 @@
                 </svg>
             </div>
             <div class="hero-image"
-                style="background-image: url(img/works/toucan/carmel-arquelau-bV3RXy9Upqg-unsplash.png);opacity: 1;">
+                style="background-image: url(/img/works/toucan/carmel-arquelau-bV3RXy9Upqg-unsplash.png);opacity: 1;">
             </div>
         </div>
 
@@ -161,7 +161,7 @@
             <div class="container project-detail">
                 <div class="row lightbox-gallery top_90">
                     <div class="col-lg-4 offset-lg-1">
-                        <img class="bottom_30 image" src="img/works/toucan/choose-a-color.gif" alt="Will-Smith">
+                        <img class="bottom_30 image" src="/img/works/toucan/choose-a-color.gif" alt="Will-Smith">
                     </div>
                     <div class="col-lg-4 offset-lg-1">
                         <h1 class="white-text toucan-h1 bottom_30">Choose your color & theme</h1>
@@ -181,12 +181,12 @@
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark">
-            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/dark-theme.png" alt="">
+            <img class="img-fluid col align-self-center p-0" src="/img/works/toucan/dark-theme.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="white">
-            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/white-theme.png" alt="">
+            <img class="img-fluid col align-self-center p-0" src="/img/works/toucan/white-theme.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="container white-bg">
@@ -204,7 +204,7 @@
         <section data-midnight="white" class="toucan-green container pb-lg-2 pb-sm-0">
             <div class="row lightbox-gallery">
                 <div class="col-lg-2 offset-lg-2 pb-3 align-self-center">
-                    <img class="d-lg-block" src="img/works/toucan/bootstrap-logo.png">
+                    <img class="d-lg-block" src="/img/works/toucan/bootstrap-logo.png">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="toucan-h1">Built on Bootstrap</h1>
@@ -218,7 +218,7 @@
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="white" class="white-bg">
-            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/curve-bottom.png" alt="">
+            <img class="img-fluid col align-self-center p-0" src="/img/works/toucan/curve-bottom.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="container project-detail white-bg padtop_90 pb-3">
@@ -234,20 +234,20 @@
             <!-- ======= 2 Images  / Start ========== -->
             <div class="row lightbox-gallery pt-4 justify-content-center" data-midnight="white">
                 <div class="col-lg-4">
-                    <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_06.png" alt="">
+                    <img class="d-block w-100" src="/img/works/toucan/Code-snipets-sample_06.png" alt="">
                 </div>
                 <div class="col-lg-6 pt-4">
-                    <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_07.png" alt="">
+                    <img class="d-block w-100" src="/img/works/toucan/Code-snipets-sample_07.png" alt="">
                 </div>
             </div>
             <!-- ======= 2 Images  / End ========== -->
             <!-- ======= 2 Images  / Start ========== -->
             <div class="row lightbox-gallery pt-4 justify-content-center" data-midnight="white">
                 <div class="col-lg-5">
-                    <img class="d-block w-100" src="img/works/toucan/Code-snipets-sample_08.png" alt="">
+                    <img class="d-block w-100" src="/img/works/toucan/Code-snipets-sample_08.png" alt="">
                 </div>
                 <div class="col-lg-5 pt-4">
-                    <img class="d-block w-100 padbot_60" src="img/works/toucan/Code-snipets-sample_09.png" alt="">
+                    <img class="d-block w-100 padbot_60" src="/img/works/toucan/Code-snipets-sample_09.png" alt="">
                 </div>
             </div>
             <!-- ======= 2 Images  / End ========== -->
@@ -264,7 +264,7 @@
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="white" class="white-bg">
-            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/bootstrap-wave-0_07.png" alt="">
+            <img class="img-fluid col align-self-center p-0" src="/img/works/toucan/bootstrap-wave-0_07.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
@@ -310,7 +310,7 @@
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="white" class="white-bg">
-            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/bootstrap-wave-0_09.png" alt="">
+            <img class="img-fluid col align-self-center p-0" src="/img/works/toucan/bootstrap-wave-0_09.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
@@ -326,7 +326,7 @@
                         </p>
                     </div>
                     <div class="col-lg-4 pt-4">
-                        <img class="d-block w-100" src="img/works/toucan/Rich-Preview.png" alt="">
+                        <img class="d-block w-100" src="/img/works/toucan/Rich-Preview.png" alt="">
                     </div>
                 </div>
         </section>
@@ -334,7 +334,7 @@
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="white" class="white-bg">
-            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/top-cruve.png" alt="">
+            <img class="img-fluid col align-self-center p-0" src="/img/works/toucan/top-cruve.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <section data-midnight="white" class="toucan-green container pb-lg-2 pb-sm-0">
@@ -362,7 +362,7 @@
         </section>
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="white" class="white-bg">
-            <img class="img-fluid col align-self-center p-0" src="img/works/toucan/curve-bottom.png" alt="">
+            <img class="img-fluid col align-self-center p-0" src="/img/works/toucan/curve-bottom.png" alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
@@ -416,9 +416,9 @@
 
 
     <!-- Javascripts -->
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
     <script type="text/javascript">
         var currentYear = new Date().getFullYear();
         document.getElementById("copyYear").innerHTML = currentYear;
