--- a/html/spanish/home.html
+++ b/html/spanish/home.html
@@ -13,7 +13,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,10 +21,10 @@
 <![endif]-->
 
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="img/favico.ico">
+  <link rel="shortcut icon" href="/img/favico.ico">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -58,7 +58,7 @@
     <!-- HEADER
 ================================================== -->
     <header>
-      <a href="es.html" class="logo float-left"></a>
+      <a href="/html/spanish/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -89,7 +89,7 @@
               <a href="#contact">Contacto</a>
             </li>
             <li class="scroll">
-              <a href="home.html">Website in English</a>
+              <a href="/english/home.html">English</a>
             </li>
           </ul>
         </div>
@@ -117,21 +117,21 @@
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="jerk-project.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/Jerk-project/jerk-project-Thumbnail.png"
+              <img class="round-corners bottom_60 plus-cursor" src="/img/works/Jerk-project/jerk-project-Thumbnail.png"
                 alt="Jerk Project">
             </a>
           </div>
 
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-USA-Today.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
+            <a href="USA-Today.html">
+              <img class="round-corners bottom_60 plus-cursor" src="/img/works/work-1/work-1-Thumb-7.png"
                 alt="USA Today Brand Refresh">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Creating-Change.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-8/Creating-Change-2.png"
+            <a href="Creating-Change.html">
+              <img class="round-corners bottom_60 plus-cursor" src="/img/works/work-8/Creating-Change-2.png"
                 alt="Creating Change">
             </a>
           </div>
@@ -141,20 +141,20 @@
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="UI-UX-Illustrations.html">
               <img class="round-corners bottom_60 plus-cursor"
-                src="img/works/UI-UX-Illustration/UI-UX-Illustrations-Thumbnail.png" alt="UI/UI Illustration">
+                src="/img/works/UI-UX-Illustration/UI-UX-Illustrations-Thumbnail.png" alt="UI/UI Illustration">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Storytelling-Bootcamp.html">
+            <a href="Storytelling-Bootcamp.html">
               <img class="round-corners bottom_60 plus-cursor"
-                src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
+                src="/img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
             </a>
           </div>
           <!--  ================== HIDE 
       <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
         <a href="Racing-Extinction.html">
-          <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
+          <img class="round-corners bottom_60 plus-cursor" src="/img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
             alt="">
         </a>
       </div>
@@ -164,7 +164,7 @@
           <!--  ================== HIDE 
       <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
         <a href="Biodiversity-Festival.html">
-          <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
+          <img class="round-corners bottom_60 plus-cursor" src="/img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
             alt="Bat Flying Animation">
         </a>
       </div>
@@ -176,15 +176,15 @@
 
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Galaxy.html">
+            <a href="Galaxy.html">
               <img class="round-corners bottom_60 plus-cursor"
-                src="img/works/Galaxy/1600x883-Galaxy-Thumbnail-Dark-UI-3.png" alt="Galaxy">
+                src="/img/works/Galaxy/1600x883-Galaxy-Thumbnail-Dark-UI-3.png" alt="Galaxy">
             </a>
           </div>
 
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-toucan-template.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/toucan/Toucan-thumbnail.png"
+            <a href="toucan-template.html">
+              <img class="round-corners bottom_60 plus-cursor" src="/img/works/toucan/Toucan-thumbnail.png"
                 alt="Library of Congress">
             </a>
           </div>
@@ -232,8 +232,8 @@
 <span> Branding </span>
 <h3 class="title">Outdoors Baseball</h3>
 </figcaption>
-<div class="image round-corners" style="background-image: url(img/work-4.jpg);">
-<img src="img/work-4.jpg" style="visibility: hidden;" />
+<div class="image round-corners" style="background-image: url(/img/work-4.jpg);">
+<img src="/img/work-4.jpg" style="visibility: hidden;" />
 </div>
 </figure>
 </a>
@@ -261,7 +261,7 @@
         </div>
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-          <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
+          <img class="round-corners" src="/img/Profile-Peter-2.png" alt="Portrait of Peter">
           <p class="padtop_60 grey-text">Hola, soy Peter. Un artista que trabaja con compañías, creaando productos y
             servicios que son fáciles de usar, y mientras estoy en ello también las asesoro para que se vean realmente
             bien. Para saber más de mi visita mi &nbsp;<a href="https://peterverastegui.wordpress.com/"
@@ -278,9 +278,146 @@
     </div>
 
 
-    <!-- CLIENT RESUME
-  ================================================== -->
-    <div id="resume" data-midnight="dark" class="container project-detail dark-bg padtop_90">
+    <!-- ======== CLIENT RESUME - DESKTOP START ======= -->
+    <div id="resume" data-midnight="dark"
+      class="container project-detail dark-bg padtop_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
+      <div class="row lightbox-gallery">
+
+        <div class="col-lg-4 col-md-12 col-sm-12">
+          <h2 class="white-text subtitle">Currículum Vitae</h2>
+        </div>
+
+        <div class="col-lg-8 col-md-12 col-sm-12 padbot_30">
+          <h3 class="grey-text">Experiencia Laboral</h3>
+        </div>
+      </div>
+
+
+      <div class="row lightbox-gallery d-flex">
+
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+
+        <div class="col">
+
+
+          <h3 class="white-text bottom_15">Giro54</h3>
+          <p class="padbot_30 grey-text">Socio | Director de UX,<br> Ene. 2024 - Presente,<br> Santa Cruz, Bolivia.</p>
+
+
+        </div>
+
+        <div class="col">
+
+
+          <h3 class="white-text bottom_15">Giro54</h3>
+          <p class="padbot_30 grey-text">UX Lead,<br> May. 2022 - Feb. 2024,<br> Santa Cruz, Bolivia.</p>
+
+
+        </div>
+
+        <div class="col">
+
+
+          <h3 class="white-text bottom_15">FINRA</h3>
+          <p class="padbot_30 grey-text">Diseñador UX Senior,<br> Feb. 2019 – Abr. 2022,<br> Maryland, EE. UU.</p>
+
+
+        </div>
+
+      </div>
+
+
+      <div class="row lightbox-gallery padbot_30">
+
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col">
+
+
+          <h3 class="white-text bottom_15">Subject Matter</h3>
+          <p class="padbot_30 grey-text">Diseñador UX,<br> Ene. 2018 – Feb. 2019,<br> Washington, D. C., EE. UU.</p>
+
+
+        </div>
+
+        <div class="col">
+
+
+          <h3 class="white-text bottom_15">USA Today</h3>
+          <p class="padbot_30 grey-text">Diseñador Grafico,<br> Abr. 2017 – Jul. 2017,<br> Virginia, EE. UU.</p>
+
+
+        </div>
+        <div class="col">
+
+
+          <h3 class="white-text bottom_15">National Geographic</h3>
+          <p class="padbot_30 grey-text">Diseñador Grafico,<br> Abr. 2016 – Abr. 2017,<br> Washington, D. C., EE. UU.
+          </p>
+
+
+        </div>
+
+
+
+      </div>
+
+
+      <div class="row lightbox-gallery">
+
+        <div class="col-lg-4 col-md-12 col-sm-12">
+        </div>
+
+        <div class="col-lg-8 col-md-12 col-sm-12 padbot_30">
+          <h3 class="grey-text">Educación</h3>
+        </div>
+      </div>
+
+
+      <div class="row lightbox-gallery">
+
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+
+        <div class="col-lg-8">
+
+
+          <h3 class="white-text bottom_15">Corcoran College of Art + Design</h3>
+          <p class="grey-text">Bachiller de Bellas Artes, licenciatura en diseño gráfico, <br> Washington, D. C., EE.
+            UU.<br> 2010 - 2014</p>
+
+
+        </div>
+
+
+      </div>
+
+      <div class="row lightbox-gallery top_60">
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+
+        <div class="col-lg-8">
+          <a href="/cv/CV_Peter Verastegui_Agosto_(2022).pdf" target="popup" download>
+            <button class="site-btn" data-tilt> DESCARGAR CV
+              <i class="icon ion-md-arrow-down"></i>
+            </button>
+          </a>
+
+        </div>
+
+      </div>
+
+
+    </div>
+    <!-- ======= CLIENT RESUME - DESKTOP -  END ======= -->
+    <!-- ======== CLIENT RESUME - MOBILE START ======= -->
+    <div id="resume" data-midnight="dark"
+      class="container project-detail dark-bg padtop_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
       <div class="row lightbox-gallery">
 
         <div class="col-lg-4 col-md-12 col-sm-12">
@@ -303,7 +440,16 @@
 
 
           <h3 class="white-text bottom_15">Giro54</h3>
-          <p class="padbot_30 grey-text">UX Lead,<br> May. 2022 - Presente,<br> Santa Cruz, Bolivia.</p>
+          <p class="padbot_30 grey-text">Socio | Director de UX,<br> Ene. 2024 - Presente,<br> Santa Cruz, Bolivia.</p>
+
+
+        </div>
+
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">Giro54</h3>
+          <p class="padbot_30 grey-text">UX Lead,<br> May. 2022 - Feb. 2024,<br> Santa Cruz, Bolivia.</p>
 
 
         </div>
@@ -316,14 +462,7 @@
 
 
         </div>
-        <div class="col-lg-2">
 
-
-          <h3 class="white-text bottom_15">Subject Matter</h3>
-          <p class="padbot_30 grey-text">Diseñador UX,<br> Ene. 2018 – Feb. 2019,<br> Washington, D. C., EE. UU.</p>
-
-
-        </div>
       </div>
 
 
@@ -332,12 +471,11 @@
         <!--  ================== SPACE DIV ===================== -->
         <div class="col-lg-4"></div>
         <!--  ================== SPACE DIV ===================== -->
-
         <div class="col-lg-2">
 
 
-          <h3 class="white-text bottom_15">PBS NewsHour</h3>
-          <p class="padbot_30 grey-text">Animador Digital,<br> Nov. 2017 – Ene. 2018,<br> Virginia, EE. UU.</p>
+          <h3 class="white-text bottom_15">Subject Matter</h3>
+          <p class="padbot_30 grey-text">Diseñador UX,<br> Ene. 2018 – Feb. 2019,<br> Washington, D. C., EE. UU.</p>
 
 
         </div>
@@ -413,7 +551,7 @@
 
 
     </div>
-
+    <!-- ======= CLIENT RESUME - MOBILE -  END ======= -->
     <!-- footer -->
     <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
       <div class="container project-detail padtop_15">
@@ -431,11 +569,10 @@
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
           </div>
+          <!-- Fix on mobile hide and show feature and in English page too also for the resume part above -->
           <div class="col-lg-2 bottom_30">
             <p class="grey-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
@@ -449,9 +586,9 @@
   </main>
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
