--- a/html/english/Image-version.html
+++ b/html/english/Image-version.html
@@ -11,7 +11,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
   	  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -19,10 +19,10 @@
   	<![endif]-->
 
   <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.png">
+  <link rel="shortcut icon" href="/img/favico.png">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -211,8 +211,8 @@
           <a href="work-1.html" class="col-lg-4 col-sm-6 grid-item photography wow fadeInUp" data-wow-delay="0.6s"
             data-type="ajax-load">
             <figure class="portfolio-item">
-              <div class="image" style="background-image: url(img/work-1.jpg);">
-                <img src="img/work-1.jpg" style="visibility: hidden;" />
+              <div class="image" style="background-image: url(/img/work-1.jpg);">
+                <img src="/img/work-1.jpg" style="visibility: hidden;" />
               </div>
               <figcaption>
                 <span> Photography </span>
@@ -230,12 +230,12 @@
               </figcaption>
               <div class="video-wrapper">
                 <video loop="" muted="">
-                  <source src="img/works/work-2/01.webm" type="video/webm">
-                  <source src="img/works/work-2/01.mp4" type="video/mp4">
+                  <source src="/img/works/work-2/01.webm" type="video/webm">
+                  <source src="/img/works/work-2/01.mp4" type="video/mp4">
                 </video>
               </div>
-              <div class="image" style="background-image: url(img/work-2.jpg);visibility: hidden;">
-                <img src="img/work-2.jpg" style="visibility: hidden;" alt="" />
+              <div class="image" style="background-image: url(/img/work-2.jpg);visibility: hidden;">
+                <img src="/img/work-2.jpg" style="visibility: hidden;" alt="" />
               </div>
             </figure>
           </a>
@@ -247,8 +247,8 @@
                 <span> Web Design </span>
                 <h3 class="title">Signé Toqué</h3>
               </figcaption>
-              <div class="image" style="background-image: url(img/work-3.jpg);">
-                <img src="img/work-3.jpg" style="visibility: hidden;" />
+              <div class="image" style="background-image: url(/img/work-3.jpg);">
+                <img src="/img/work-3.jpg" style="visibility: hidden;" />
               </div>
             </figure>
           </a>
@@ -260,8 +260,8 @@
                 <span> Branding </span>
                 <h3 class="title">Outdoors Baseball</h3>
               </figcaption>
-              <div class="image" style="background-image: url(img/work-4.jpg);">
-                <img src="img/work-4.jpg" style="visibility: hidden;" />
+              <div class="image" style="background-image: url(/img/work-4.jpg);">
+                <img src="/img/work-4.jpg" style="visibility: hidden;" />
               </div>
             </figure>
           </a>
@@ -273,8 +273,8 @@
                 <span> Branding </span>
                 <h3 class="title">NY Homeless</h3>
               </figcaption>
-              <div class="image" style="background-image: url(img/work-5.jpg);">
-                <img src="img/work-5.jpg" style="visibility: hidden;" />
+              <div class="image" style="background-image: url(/img/work-5.jpg);">
+                <img src="/img/work-5.jpg" style="visibility: hidden;" />
               </div>
             </figure>
           </a>
@@ -286,8 +286,8 @@
                 <span> Web Design </span>
                 <h3 class="title">Brandenburg Countryside</h3>
               </figcaption>
-              <div class="image" style="background-image: url(img/work-6.jpg);">
-                <img src="img/work-6.jpg" style="visibility: hidden;" />
+              <div class="image" style="background-image: url(/img/work-6.jpg);">
+                <img src="/img/work-6.jpg" style="visibility: hidden;" />
               </div>
             </figure>
           </a>
@@ -314,28 +314,28 @@
 
         <div class="row wow fadeInUp" data-wow-delay="0.6s">
           <div class="col-lg-3 col-md-6 col-sm-6 client">
-            <img src="img/clients/client-1w.png" alt="">
+            <img src="/img/clients/client-1w.png" alt="">
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6 client">
-            <img src="img/clients/client-2w.png" alt="">
+            <img src="/img/clients/client-2w.png" alt="">
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6 client">
-            <img src="img/clients/client-3w.png" alt="">
+            <img src="/img/clients/client-3w.png" alt="">
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6 client">
-            <img src="img/clients/client-4w.png" alt="">
+            <img src="/img/clients/client-4w.png" alt="">
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6 client">
-            <img src="img/clients/client-5w.png" alt="">
+            <img src="/img/clients/client-5w.png" alt="">
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6 client">
-            <img src="img/clients/client-6w.png" alt="">
+            <img src="/img/clients/client-6w.png" alt="">
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6 client">
-            <img src="img/clients/client-7w.png" alt="">
+            <img src="/img/clients/client-7w.png" alt="">
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6 client">
-            <img src="img/clients/client-8w.png" alt="">
+            <img src="/img/clients/client-8w.png" alt="">
           </div>
         </div>
 
@@ -452,23 +452,23 @@
 
     <div id="clone-image">
       <div class="page-container">
-        <div class="page" data-src="img/work-1.jpg"></div>
-        <div class="page" data-src="img/work-2.jpg"></div>
-        <div class="page" data-src="img/work-3.jpg"></div>
-        <div class="page" data-src="img/work-4.jpg"></div>
-        <div class="page" data-src="img/work-5.jpg"></div>
-        <div class="page" data-src="img/work-6.jpg"></div>
-        <div class="page" data-src="img/work-7.jpg"></div>
-        <div class="page" data-src="img/work-8.jpg"></div>
+        <div class="page" data-src="/img/work-1.jpg"></div>
+        <div class="page" data-src="/img/work-2.jpg"></div>
+        <div class="page" data-src="/img/work-3.jpg"></div>
+        <div class="page" data-src="/img/work-4.jpg"></div>
+        <div class="page" data-src="/img/work-5.jpg"></div>
+        <div class="page" data-src="/img/work-6.jpg"></div>
+        <div class="page" data-src="/img/work-7.jpg"></div>
+        <div class="page" data-src="/img/work-8.jpg"></div>
       </div>
     </div>
 
   </main>
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
