--- a/html/english/Library-of-Congress.html
+++ b/html/english/Library-of-Congress.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
-  <title>Peter Verastegui | library of Congress</title>
+  <title>Peter Verastegui | Portfolio</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Portafolio de Peter Verastegui">
-  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
+  <meta name="description" content="Peter Verastegui's Portofolio">
+  <meta name="keywords" content="personal, portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Portafolio de Peter Verastegui" />
-  <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-  <!-- FAVICON -->
-  <link rel="shortcut icon" href="img/favico.ico">
+  <!-- FAVICON  -->
+  <link rel="shortcut icon" href="/img/favico.png">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -41,6 +39,7 @@
 </head>
 
 <body>
+
   <!-- Preloader -->
   <div id="preloader">
     <svg width="60px" height="60px" viewBox="0 0 100 100">
@@ -52,13 +51,13 @@
       </path>
     </svg>
   </div>
+
   <main>
 
-
-    <!-- HEADER
+    <!-- Header
 ================================================== -->
     <header>
-      <a href="es.html" class="logo float-left"></a>
+      <a href="/html/english/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -74,22 +73,22 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="es.html#portfolio">Portafolio</a>
+              <a href="html/english/home.html#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="es.html#about">Acerca de mi</a>
+              <a href="/html/english/home.html#about">About</a>
             </li>
             <li class="scroll">
-              <a href="es.html#resume">Currículum Vitae</a>
+              <a href="/html/english/home.html#resume">Resume</a>
             </li>
             <li class="scroll">
-              <a href="#contact">Contacto</a>
+              <a href="home.html#contact">Contact</a>
             </li>
             <li class="scroll">
-              <a href="home.html">Website in English</a>
+              <a href="/html/spanish/home.html">Español</a>
             </li>
           </ul>
         </div>
@@ -99,21 +98,17 @@
     <!-- Up to top -->
     <div class="uptotop">
       <div class="holder">
-        <span>Ir arriba</span>
+        <span>Up to top</span>
         <div class="arrow"></div>
       </div>
     </div>
-
-
-
-
 
     <!-- Hero Section
 ================================================== -->
     <div class="hero" data-midnight="dark">
       <div class="hero-content">
         <div class="inner">
-          <h1 class="title">Biblioteca del Congreso</h1>
+          <h1 class="title">Library of Congress</h1>
           <span class="category">UI/UX</span>
         </div>
       </div>
@@ -128,7 +123,7 @@
             style="fill:none;stroke:#F2F2F2;stroke-width:20px;" />
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/work-7/Cover-IMG.png);"></div>
+      <div class="hero-image" style="background-image: url(/img/works/work-7/Cover-IMG.png);"></div>
     </div>
 
     <!-- Work Content
@@ -137,19 +132,18 @@
       <div class="container project-detail">
         <div class="row lightbox-gallery">
           <div class="col-lg-8 ">
-            <h2 class="title bottom_30">Navegación Web</h2>
-            <p>En este proyecto busqué mejorar la navegación en la pagina web de la biblioteca del congreso de los
-              Estados Unidos, al estudiar la pagina me di cuenta que la arquitectura de la información era
-              sorprendentemente coherente, una ves le das una oportunidad. Sin embargo la falta de jerarquía visual
-              complica la navegación. La pagina en general no era muy difícil de entender pero no era lo mas intuitiva
-              posible, con respecto a ayudar al usuario a orientarse dentro de tanta información; la cual por momentos
-              se volvía abrumadora.</p>
+            <h2 class="title bottom_30">Website Navigation</h2>
+            <p>In this project I sought to improve navigation on the website of the United States Library of Congress,
+              when studying the page I realized that the information architecture was surprisingly coherent, once you
+              give it a chance. However, the lack of visual hierarchy complicates navigation. The page in general was
+              not very difficult to understand but it was not as intuitive as possible, with respect to helping the user
+              to orient themselves within so much information; which at times became overwhelming.</p>
           </div>
           <div class="col-lg-4 ">
-            <h2 class="title bottom_30">Créditos</h2>
-            <p>Universidad: Corcoran College of Art + Design,
+            <h2 class="title bottom_30">Credits</h2>
+            <p>School: Corcoran College of Art + Design,
               <br>Instructor: David Ramos,
-              <br>Estudiante: Peter Verastegui
+              <br>Student: Peter Verastegui
             </p>
           </div>
         </div>
@@ -159,17 +153,17 @@
       <div class="row no-gutter">
         <div class="col-lg-4 ">
           <div class="image top_45 bottom_45">
-            <img src="img/works/work-7/LOC_Sketch_01.png" alt="">
+            <img src="/img/works/work-7/LOC_Sketch_01.png" alt="">
           </div>
         </div>
         <div class="col-lg-4">
           <div class="image top_45 bottom_45">
-            <img src="img/works/work-7/LOC_Sketch_02.png" alt="">
+            <img src="/img/works/work-7/LOC_Sketch_02.png" alt="">
           </div>
         </div>
         <div class="col-lg-4">
           <div class="image top_45 bottom_45">
-            <img src="img/works/work-7/LOC_Sketch_03.png" alt="">
+            <img src="/img/works/work-7/LOC_Sketch_03.png" alt="">
           </div>
         </div>
       </div>
@@ -178,22 +172,21 @@
       <div class="container project-detail">
         <div class="row lightbox-gallery">
           <div class="col-lg-6">
-            <h2 class="title bottom_30">Educación</h2>
-            <p>En esta sección encontraras artículos, plantillas para lecciones, y material educativo como videos y
-              imágenes. Aquí se necesita una nueva barra de búsqueda y búsqueda avanzada, lo cual implica también una
-              nueva lista de resultados.
+            <h2 class="title bottom_30">Education</h2>
+            <p>In this section you'll find articles, lesson plans, and classroom material like videos and images. So a
+              new "search" and "advance search bar is needed, also a better list that display the result of a search.
             </p>
           </div>
           <div class="col-lg-6">
-            <h2 class="title bottom_30">Visitar</h2>
-            <p>En esta sección los usuarios encuentra información acerca de eventos como conferencias, exhibiciones,
-              conciertos, direcciones de los distintos edificios de la biblioteca, mapas, y información en general como
-              números de teléfono y horas de atención, esta parte es la que necesita de mas ayuda. </p>
+            <h2 class="title bottom_30">Visit</h2>
+            <p>in this section people can find about events like lectures, exhibits, concerts , tours, directions, maps,
+              and general information such as phone numbers for each department and hours of operation. This section
+              needs the most help.</p>
           </div>
         </div>
     </section>
     <div data-midnight="white">
-      <img class="img-fluid" src="img/works/work-7/COLOR-PALETTE.png" alt="Social video styleguide">
+      <img class="img-fluid" src="/img/works/work-7/COLOR-PALETTE.png" alt="Social video styleguide">
     </div>
     <section data-midnight="white" class="padding_90 lightgrey-bg">
       <!-- Images -->
@@ -201,14 +194,14 @@
         <!-- a image -->
         <div class="col-lg-10 offset-lg-1">
           <div class="image">
-            <img src="img/works/work-7/Library-of-Congres-Website-2.png" alt="">
+            <img src="/img/works/work-7/Library-of-Congres-Website-2.png" alt="">
           </div>
         </div>
         <!-- a image -->
       </div>
     </section>
     <div data-midnight="white" class="project-detail padding_60">
-      <h3 class=" text subtitle text-center">Educación</h3>
+      <h3 class=" text subtitle text-center">Education</h3>
     </div>
 
     <section data-midnight="white" class="padding_90 lightgrey-bg">
@@ -217,7 +210,7 @@
         <!-- a image -->
         <div class="col-lg-10 offset-lg-1">
           <div class="image">
-            <img src="img/works/work-7/LOC_Large_Screens-Education.png" alt="Desktop screens">
+            <img src="/img/works/work-7/LOC_Large_Screens-Education.png" alt="Desktop screens">
           </div>
         </div>
         <!-- a image -->
@@ -225,7 +218,7 @@
     </section>
 
     <div data-midnight="white" class="project-detail padding_60">
-      <h3 class=" text subtitle text-center">Visitar</h3>
+      <h3 class=" text subtitle text-center">Visit</h3>
     </div>
 
     <section data-midnight="white" class="padding_90 lightgrey-bg">
@@ -234,44 +227,40 @@
         <!-- a image -->
         <div class="col-lg-10 offset-lg-1">
           <div class="image">
-            <img src="img/works/work-7/LOC_small_device_Screens-Visit.png" alt="Mobile screens">
+            <img src="/img/works/work-7/LOC_small_device_Screens-Visit.png" alt="Mobile screens">
           </div>
         </div>
         <!-- a image -->
       </div>
     </section>
-    <section data-midnight="white">
+    <section>
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="es-Galaxy.html">
-          <div class="nav-title">Siguiente</div>
+        <a class="next-link" href="Galaxy.html">
+          <div class="nav-title">Next Work</div>
           <div class="next-title">Galaxy</div>
         </a>
       </div>
     </section>
 
-    <!-- footer -->
-    <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+    <!-- footer Desktop Start -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contacto</h2>
+            <h2 class="white-text subtitle bottom_30">Contact</h2>
           </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-          </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
-                aria-hidden="true"></i> </a>
           </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col bottom_30">
             <p class="white-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
@@ -279,14 +268,42 @@
       </div>
       </div>
     </footer>
+    <!-- footer Desktop End-->
 
+    <!-- footer Mobile Start -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
+      <div class="container project-detail padtop_15">
+        <div class="row lightbox-gallery">
+          <div class="col-lg-4">
+            <h2 class="white-text subtitle bottom_30">Contact</h2>
+          </div>
+          <div class="col-lg-2 bottom_30">
+            <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
+          </div>
+          <div class="col-lg-2  bottom_30">
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
+                aria-hidden="true"></i> </a>
+          </div>
+          <div class="col-lg-2  bottom_30">
+            <p class="white-text">
+              &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </footer>
+    <!-- footer Mobile End-->
   </main>
 
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
