--- a/html/english/Love-Letter.html
+++ b/html/english/Love-Letter.html
@@ -11,7 +11,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -19,10 +19,10 @@
     <![endif]-->
 
   <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.png">
+  <link rel="shortcut icon" href="/img/favico.png">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -57,7 +57,7 @@
     <!-- Header
 ================================================== -->
     <header>
-      <a href="home.html" class="logo float-left"></a>
+      <a href="/html/english/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -73,10 +73,10 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="home.html#portfolio">Portfolio</a>
+              <a href="html/english/home.html#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
-              <a href="home.html#about">About</a>
+              <a href="/html/english/home.html#about">About</a>
             </li>
             <li class="scroll">
               <a href="home.html#clients">Clients</a>
@@ -119,11 +119,11 @@
       </div>
       <div class="video-wrapper">
         <video loop="" muted="" autoplay="">
-          <source src="img/works/work-2/01.webm" type="video/webm">
-          <source src="img/works/work-2/01.mp4" type="video/mp4">
+          <source src="/img/works/work-2/01.webm" type="video/webm">
+          <source src="/img/works/work-2/01.mp4" type="video/mp4">
         </video>
       </div>
-      <div class="hero-image mobile-image" style="background-image: url(img/work-2.jpg); visibility: hidden;"></div>
+      <div class="hero-image mobile-image" style="background-image: url(/img/work-2.jpg); visibility: hidden;"></div>
     </div>
 
 
@@ -142,55 +142,55 @@
           <!-- a image -->
           <div class="col-lg-4 image">
             <a href="img/works/work-1/01.jpg" class="lightbox">
-              <img src="img/works/work-2/02.jpg" alt="">
+              <img src="/img/works/work-2/02.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
             <a href="img/works/work-1/03.jpg" class="lightbox">
-              <img src="img/works/work-1/03.jpg" alt="">
+              <img src="/img/works/work-1/03.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
             <a href="img/works/work-2/04.jpg" class="lightbox">
-              <img src="img/works/work-2/04.jpg" alt="">
+              <img src="/img/works/work-2/04.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
             <a href="img/works/work-2/05.jpg" class="lightbox">
-              <img src="img/works/work-2/05.jpg" alt="">
+              <img src="/img/works/work-2/05.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
             <a href="img/works/work-2/06.jpg" class="lightbox">
-              <img src="img/works/work-2/06.jpg" alt="">
+              <img src="/img/works/work-2/06.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
             <a href="img/works/work-2/07.jpg" class="lightbox">
-              <img src="img/works/work-2/07.jpg" alt="">
+              <img src="/img/works/work-2/07.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
             <a href="img/works/work-2/08.jpg" class="lightbox">
-              <img src="img/works/work-2/08.jpg" alt="">
+              <img src="/img/works/work-2/08.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
             <a href="img/works/work-2/09.jpg" class="lightbox">
-              <img src="img/works/work-2/09.jpg" alt="">
+              <img src="/img/works/work-2/09.jpg" alt="">
             </a>
           </div>
           <!-- a image -->
           <div class="col-lg-4 image">
             <a href="img/works/work-2/10.jpg" class="lightbox">
-              <img src="img/works/work-2/10.jpg" alt="">
+              <img src="/img/works/work-2/10.jpg" alt="">
             </a>
           </div>
         </div>
@@ -232,9 +232,9 @@
 
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
 
 
 </body>
