--- a/html/english/Shop.html
+++ b/html/english/Shop.html
@@ -11,7 +11,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -19,10 +19,10 @@
     <![endif]-->
 
     <!-- FAVICON  -->
-    <link rel="shortcut icon" href="img/favico.png">
+    <link rel="shortcut icon" href="/img/favico.png">
 
     <!-- Font icons -->
-    <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -57,7 +57,7 @@
 
         <!-- Header -->
         <header>
-            <a href="home.html" class="logo float-left"></a>
+            <a href="/html/english/home.html" class="logo float-left"></a>
             <div class="menu float-right">
                 <div class="nav-icon">
                     <span></span>
@@ -73,19 +73,19 @@
                 <div class="menu-holder">
                     <ul class="navmenu">
                         <li class="scroll">
-                            <a href="home.html#portfolio">Portfolio</a>
+                            <a href="html/english/home.html#portfolio">Portfolio</a>
                         </li>
                         <li class="scroll">
                             <a href="https://peterverastegui.wordpress.com/">Blog</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#about">About</a>
+                            <a href="/html/english/home.html#about">About</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#resume">Resume</a>
+                            <a href="/html/english/home.html#resume">Resume</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#contact">Contact Information</a>
+                            <a href="home.html#contact">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -116,7 +116,7 @@
                             <div class="product_box project-detail">
 
                                 <a href="https://bestwebcreator.com/shopwise/demo/demo-rtl/shop-product-detail.html">
-                                    <img class="product_img" src="img/Shop/furniture_img4.jpg" alt="furniture_img2">
+                                    <img class="product_img" src="/img/Shop/furniture_img4.jpg" alt="furniture_img2">
                                 </a>
 
                                 <div class="product_info padding_10_item">
@@ -134,7 +134,7 @@
                             <div class="product_box project-detail">
 
                                 <a href="https://bestwebcreator.com/shopwise/demo/demo-rtl/shop-product-detail.html">
-                                    <img class="product_img" src="img/Shop/furniture_img4.jpg" alt="furniture_img2">
+                                    <img class="product_img" src="/img/Shop/furniture_img4.jpg" alt="furniture_img2">
                                 </a>
 
                                 <div class="product_info padding_10_item">
@@ -152,7 +152,7 @@
                             <div class="product_box project-detail">
 
                                 <a href="https://bestwebcreator.com/shopwise/demo/demo-rtl/shop-product-detail.html">
-                                    <img class="product_img" src="img/Shop/furniture_img4.jpg" alt="furniture_img2">
+                                    <img class="product_img" src="/img/Shop/furniture_img4.jpg" alt="furniture_img2">
                                 </a>
 
                                 <div class="product_info padding_10_item">
@@ -170,7 +170,7 @@
                             <div class="product_box project-detail">
 
                                 <a href="https://bestwebcreator.com/shopwise/demo/demo-rtl/shop-product-detail.html">
-                                    <img class="product_img" src="img/Shop/furniture_img4.jpg" alt="furniture_img2">
+                                    <img class="product_img" src="/img/Shop/furniture_img4.jpg" alt="furniture_img2">
                                 </a>
 
                                 <div class="product_info padding_10_item">
@@ -202,7 +202,7 @@
                 <div class="row lightbox-gallery offset-lg-1">
                     <!-- project-detail Two Columns | Start -->
                     <div class="col-lg-5 padtop_30">
-                        <img class="product_img round-corners" src="img/Shop/furniture_img4.jpg" alt="product_img1">
+                        <img class="product_img round-corners" src="/img/Shop/furniture_img4.jpg" alt="product_img1">
                     </div>
                     <div class="col-lg-5">
                         <h2 class="title padding_30">Item Name</h2>
@@ -239,31 +239,28 @@
 
 
 
-        <!-- footer -->
-        <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+        <!-- footer Desktop Start -->
+        <footer id="contact" data-midnight="dark"
+            class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
             <div class="container project-detail padtop_15">
                 <div class="row lightbox-gallery">
                     <div class="col-lg-4">
-                        <h2 class="white-text subtitle bottom_30">Contact Information</h2>
+                        <h2 class="white-text subtitle bottom_30">Contact</h2>
                     </div>
-                    <div class="col-lg-2 bottom_30">
+                    <div class="col bottom_30">
                         <a href="mailto:verastegui.peter@gmail.com?Subject=Hello"
                             target="_blank">verastegui.peter@gmail.com</a>
                     </div>
-                    <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-                        <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-                    </div>
-                    <div class="col-lg-2 bottom_30">
+                    <div class="col bottom_30">
                         <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
                                 aria-hidden="true"></i> </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;
+                        <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
+                        </a>
                         &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
                                 class="fab fa-pinterest" aria-hidden="true"></i> </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i
-                                class="fab fa-instagram" aria-hidden="true"></i> </a>
                     </div>
-                    <div class="col-lg-2 bottom_30">
+                    <div class="col bottom_30">
                         <p class="white-text">
                             &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
                     </div>
@@ -271,13 +268,45 @@
             </div>
             </div>
         </footer>
+        <!-- footer Desktop End-->
+
+        <!-- footer Mobile Start -->
+        <footer id="contact" data-midnight="dark"
+            class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
+            <div class="container project-detail padtop_15">
+                <div class="row lightbox-gallery">
+                    <div class="col-lg-4">
+                        <h2 class="white-text subtitle bottom_30">Contact</h2>
+                    </div>
+                    <div class="col-lg-2 bottom_30">
+                        <a href="mailto:verastegui.peter@gmail.com?Subject=Hello"
+                            target="_blank">verastegui.peter@gmail.com</a>
+                    </div>
+                    <div class="col-lg-2  bottom_30">
+                        <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
+                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;
+                        <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
+                        </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
+                                class="fab fa-pinterest" aria-hidden="true"></i> </a>
+                    </div>
+                    <div class="col-lg-2  bottom_30">
+                        <p class="white-text">
+                            &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </footer>
+        <!-- footer Mobile End-->
 
     </main>
 
     <!-- Javascripts -->
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
     <script type="text/javascript">
         var currentYear = new Date().getFullYear();
         document.getElementById("copyYear").innerHTML = currentYear;
