--- a/html/english/Storytelling-Bootcamp.html
+++ b/html/english/Storytelling-Bootcamp.html
@@ -11,7 +11,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -19,10 +19,10 @@
     <![endif]-->
 
     <!-- FAVICON  -->
-    <link rel="shortcut icon" href="img/favico.png">
+    <link rel="shortcut icon" href="/img/favico.png">
 
     <!-- Font icons -->
-    <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -57,7 +57,7 @@
         <!-- Header
 ================================================== -->
         <header>
-            <a href="home.html" class="logo float-left"></a>
+            <a href="/html/english/home.html" class="logo float-left"></a>
             <div class="menu float-right">
                 <div class="nav-icon">
                     <span></span>
@@ -73,22 +73,22 @@
                 <div class="menu-holder">
                     <ul class="navmenu">
                         <li class="scroll">
-                            <a href="home.html#portfolio">Portfolio</a>
+                            <a href="html/english/home.html#portfolio">Portfolio</a>
                         </li>
                         <li class="scroll">
                             <a href="https://peterverastegui.wordpress.com/">Blog</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#about">About</a>
+                            <a href="/html/english/home.html#about">About</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#resume">Resume</a>
+                            <a href="/html/english/home.html#resume">Resume</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html#contact">Contact Information</a>
+                            <a href="home.html#contact">Contact</a>
                         </li>
                         <li class="scroll">
-                            <a href="es.html">Website en Español</a>
+                            <a href="/html/spanish/home.html">Español</a>
                         </li>
                     </ul>
                 </div>
@@ -126,7 +126,8 @@
                 </svg>
             </div>
             <div class="hero-image"
-                style="background-image: url(img/works/work-4/Dave-McAloney-for-nationalgeographic-2401211.png);"></div>
+                style="background-image: url(/img/works/work-4/Dave-McAloney-for-nationalgeographic-2401211.png);">
+            </div>
         </div>
 
 
@@ -162,14 +163,14 @@
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark">
             <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0"
-                src="img/works/work-4/Badges-STORYTELLING-BOOTCAMP.png" alt="Badges">
+                src="/img/works/work-4/Badges-STORYTELLING-BOOTCAMP.png" alt="Badges">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark">
             <img class="img-fluid col align-self-center pr-0 pl-0"
-                src="img/works/work-4/Email-evite-Storytelling-Bootcamp.png" alt="New elements">
+                src="/img/works/work-4/Email-evite-Storytelling-Bootcamp.png" alt="New elements">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
@@ -180,13 +181,13 @@
                 data-nav="false" data-dots="true" data-items-desktop="1" data-items-desktop-small="1"
                 data-items-tablet="1" data-items-tablet-small="1">
                 <div class="item">
-                    <img src="img/works/work-4/Leave-behind-01.png" alt="">
+                    <img src="/img/works/work-4/Leave-behind-01.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="img/works/work-4/Leave-behind-02.png" alt="">
+                    <img src="/img/works/work-4/Leave-behind-02.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="img/works/work-4/Leave-behind-04.png" alt="">
+                    <img src="/img/works/work-4/Leave-behind-04.png" alt="">
                 </div>
             </div>
         </section>
@@ -194,14 +195,14 @@
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark" class="img-fluid">
-            <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0" src="img/works/work-4/one-page-Bio.jpg"
+            <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0" src="/img/works/work-4/one-page-Bio.jpg"
                 alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark" class="img-fluid">
-            <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0" src="img/works/work-4/one-page-Bio-2.jpg"
+            <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0" src="/img/works/work-4/one-page-Bio-2.jpg"
                 alt="Letterhead">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
@@ -209,7 +210,7 @@
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark">
             <img class="img-fluid col align-self-center pr-0 pl-0"
-                src="img/works/work-4/Top-10-tips-STORYTELLING-BOOTCAMP.png" alt="Take aways">
+                src="/img/works/work-4/Top-10-tips-STORYTELLING-BOOTCAMP.png" alt="Take aways">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <!--footer-->
@@ -223,31 +224,28 @@
             </div>
         </section>
 
-        <!-- footer -->
-        <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+        <!-- footer Desktop Start -->
+        <footer id="contact" data-midnight="dark"
+            class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
             <div class="container project-detail padtop_15">
                 <div class="row lightbox-gallery">
                     <div class="col-lg-4">
-                        <h2 class="white-text subtitle bottom_30">Contact Information</h2>
+                        <h2 class="white-text subtitle bottom_30">Contact</h2>
                     </div>
-                    <div class="col-lg-2 bottom_30">
+                    <div class="col bottom_30">
                         <a href="mailto:verastegui.peter@gmail.com?Subject=Hello"
                             target="_blank">verastegui.peter@gmail.com</a>
                     </div>
-                    <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-                        <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-                    </div>
-                    <div class="col-lg-2 bottom_30">
+                    <div class="col bottom_30">
                         <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
                                 aria-hidden="true"></i> </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;
+                        <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
+                        </a>
                         &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
                                 class="fab fa-pinterest" aria-hidden="true"></i> </a>
-                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i
-                                class="fab fa-instagram" aria-hidden="true"></i> </a>
                     </div>
-                    <div class="col-lg-2 bottom_30">
+                    <div class="col bottom_30">
                         <p class="white-text">
                             &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
                     </div>
@@ -255,14 +253,46 @@
             </div>
             </div>
         </footer>
+        <!-- footer Desktop End-->
+
+        <!-- footer Mobile Start -->
+        <footer id="contact" data-midnight="dark"
+            class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
+            <div class="container project-detail padtop_15">
+                <div class="row lightbox-gallery">
+                    <div class="col-lg-4">
+                        <h2 class="white-text subtitle bottom_30">Contact</h2>
+                    </div>
+                    <div class="col-lg-2 bottom_30">
+                        <a href="mailto:verastegui.peter@gmail.com?Subject=Hello"
+                            target="_blank">verastegui.peter@gmail.com</a>
+                    </div>
+                    <div class="col-lg-2  bottom_30">
+                        <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
+                                aria-hidden="true"></i> </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;
+                        <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
+                        </a>
+                        &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i
+                                class="fab fa-pinterest" aria-hidden="true"></i> </a>
+                    </div>
+                    <div class="col-lg-2  bottom_30">
+                        <p class="white-text">
+                            &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </footer>
+        <!-- footer Mobile End-->
 
     </main>
 
 
     <!-- Javascripts -->
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
     <script type="text/javascript">
         var currentYear = new Date().getFullYear();
         document.getElementById("copyYear").innerHTML = currentYear;
