--- a/html/english/home.html
+++ b/html/english/home.html
@@ -13,7 +13,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,10 +21,10 @@
 <![endif]-->
 
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="img/favico.ico">
+  <link rel="shortcut icon" href="/img/favico.ico">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -58,7 +58,7 @@
     <!-- HEADER
 ================================================== -->
     <header>
-      <a href="home.html" class="logo float-left"></a>
+      <a href="/english/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -86,7 +86,7 @@
               <a href="#contact">Contact</a>
             </li>
             <li class="scroll">
-              <a href="es.html">Español</a>
+              <a href="/html/spanish/home.html">Español</a>
             </li>
 
           </ul>
@@ -115,21 +115,21 @@
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="jerk-project.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/Jerk-project/jerk-project-Thumbnail.png"
+              <img class="round-corners bottom_60 plus-cursor" src="/img/works/Jerk-project/jerk-project-Thumbnail.png"
                 alt="Jerk Project">
             </a>
           </div>
 
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="USA-Today.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
+              <img class="round-corners bottom_60 plus-cursor" src="/img/works/work-1/work-1-Thumb-7.png"
                 alt="USA Today Brand Refresh">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Creating-Change.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-8/Creating-Change-2.png"
+              <img class="round-corners bottom_60 plus-cursor" src="/img/works/work-8/Creating-Change-2.png"
                 alt="Creating Change">
             </a>
           </div>
@@ -137,22 +137,22 @@
 
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="UI-UX-Illustrations.html">
+            <a href="/html/english/UI-UX-Illustrations.html">
               <img class="round-corners bottom_60 plus-cursor"
-                src="img/works/UI-UX-Illustration/UI-UX-Illustrations-Thumbnail.png" alt="UI/UI Illustration">
+                src="/img/works/UI-UX-Illustration/UI-UX-Illustrations-Thumbnail.png" alt="UI/UI Illustration">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Storytelling-Bootcamp.html">
+            <a href="/html/english/Storytelling-Bootcamp.html">
               <img class="round-corners bottom_60 plus-cursor"
-                src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
+                src="/img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
             </a>
           </div>
           <!--  ================== HIDE 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Racing-Extinction.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
+              <img class="round-corners bottom_60 plus-cursor" src="/img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
                 alt="">
             </a>
           </div>
@@ -162,7 +162,7 @@
           <!--  ================== HIDE 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <a href="Biodiversity-Festival.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
+              <img class="round-corners bottom_60 plus-cursor" src="/img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
                 alt="Bat Flying Animation">
             </a>
           </div>
@@ -174,15 +174,15 @@
 
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="Galaxy.html">
+            <a href="/html/english/Galaxy.html">
               <img class="round-corners bottom_60 plus-cursor"
-                src="img/works/Galaxy/1600x883-Galaxy-Thumbnail-Dark-UI-3.png" alt="Galaxy">
+                src="/img/works/Galaxy/1600x883-Galaxy-Thumbnail-Dark-UI-3.png" alt="Galaxy">
             </a>
           </div>
 
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="toucan-template.html">
-              <img class="round-corners bottom_60 plus-cursor" src="img/works/toucan/Toucan-thumbnail.png"
+            <a href="/html/english/toucan-template.html">
+              <img class="round-corners bottom_60 plus-cursor" src="/img/works/toucan/Toucan-thumbnail.png"
                 alt="Library of Congress">
             </a>
           </div>
@@ -225,8 +225,8 @@
 <span> Branding </span>
 <h3 class="title">Outdoors Baseball</h3>
 </figcaption>
-<div class="image round-corners" style="background-image: url(img/work-4.jpg);">
-<img src="img/work-4.jpg" style="visibility: hidden;" />
+<div class="image round-corners" style="background-image: url(/img/work-4.jpg);">
+<img src="/img/work-4.jpg" style="visibility: hidden;" />
 </div>
 </figure>
 </a>
@@ -253,7 +253,7 @@
         </div>
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
-          <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
+          <img class="round-corners" src="/img/Profile-Peter-2.png" alt="Portrait of Peter">
           <p class="padtop_60 grey-text">Hello, my name is Peter. I am an artist that helps companies make their
             products easy-to-use and while I am at it I also help them look good, real good. To learn more about me
             check out my <a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
@@ -269,9 +269,9 @@
     </div>
 
 
-    <!-- CLIENT RESUME
-  ================================================== -->
-    <div id="resume" data-midnight="dark" class="container project-detail dark-bg padtop_90">
+    <!--  ======= RESUME - Dektop - Start =======  -->
+    <div id="resume" data-midnight="dark"
+      class="container project-detail dark-bg padtop_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
       <div class="row lightbox-gallery">
 
         <div class="col-lg-4 col-md-12 col-sm-12">
@@ -290,16 +290,23 @@
         <div class="col-lg-4"></div>
         <!--  ================== SPACE DIV ===================== -->
 
-        <div class="col-lg-2">
+        <div class="col">
 
 
           <h3 class="white-text bottom_15">Giro54</h3>
-          <p class="padbot_30 grey-text">UX Lead,<br> May 2022 – Present,<br> Santa Cruz, Bolivia</p>
+          <p class="padbot_30 grey-text">Partner,<br> Jan 2024 – Present,<br> Santa Cruz, Bolivia</p>
 
 
         </div>
 
-        <div class="col-lg-2">
+        <div class="col">
+
+          <h3 class="white-text bottom_15">Giro54</h3>
+          <p class="padbot_30 grey-text">UX Lead,<br> May 2022 – Feb 2024,<br> Santa Cruz, Bolivia</p>
+
+        </div>
+
+        <div class="col">
 
 
           <h3 class="white-text bottom_15">FINRA</h3>
@@ -307,14 +314,7 @@
 
 
         </div>
-        <div class="col-lg-2">
 
-
-          <h3 class="white-text bottom_15">Subject Matter</h3>
-          <p class="padbot_30 grey-text">Interaction Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC, U.S.</p>
-
-
-        </div>
       </div>
 
 
@@ -323,17 +323,16 @@
         <!--  ================== SPACE DIV ===================== -->
         <div class="col-lg-4"></div>
         <!--  ================== SPACE DIV ===================== -->
+        <div class="col">
 
-        <div class="col-lg-2">
 
-
-          <h3 class="white-text bottom_15">PBS NewsHour</h3>
-          <p class="padbot_30 grey-text">Motion Designer,<br> Nov 2017 – Jan 2018,<br> Arlington, VA, U.S.</p>
+          <h3 class="white-text bottom_15">Subject Matter</h3>
+          <p class="padbot_30 grey-text">Interaction Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC, U.S.</p>
 
 
         </div>
 
-        <div class="col-lg-2">
+        <div class="col">
 
 
           <h3 class="white-text bottom_15">USA Today</h3>
@@ -341,7 +340,7 @@
 
 
         </div>
-        <div class="col-lg-2">
+        <div class="col">
 
 
           <h3 class="white-text bottom_15">National Geographic</h3>
@@ -349,6 +348,8 @@
 
 
         </div>
+
+
 
       </div>
 
@@ -389,8 +390,163 @@
         </div>
       </div>
     </div>
-    <!-- footer -->
-    <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
+    <!--  ======= RESUME - Dektop - End =======  -->
+
+    <!--  ======= RESUME - Mobile - Start =======  -->
+    <div id="resume" data-midnight="dark"
+      class="container project-detail dark-bg padtop_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
+      <div class="row lightbox-gallery">
+
+        <div class="col-lg-4 col-md-12 col-sm-12">
+          <h2 class="white-text subtitle">Resume</h2>
+        </div>
+
+        <div class="col-lg-8 col-md-12 col-sm-12 padbot_30">
+          <h3 class="grey-text">Experience</h3>
+        </div>
+      </div>
+
+
+      <div class="row lightbox-gallery">
+
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">Giro54</h3>
+          <p class="padbot_30 grey-text">Partner,<br> Jan 2024 – Present,<br> Santa Cruz, Bolivia</p>
+
+
+        </div>
+
+        <div class="col-lg-2">
+
+          <h3 class="white-text bottom_15">Giro54</h3>
+          <p class="padbot_30 grey-text">UX Lead,<br> May 2022 – Feb 2024,<br> Santa Cruz, Bolivia</p>
+
+        </div>
+
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">FINRA</h3>
+          <p class="padbot_30 grey-text">Sr. Interaction Designer,<br> Feb 2019 – Apr 2022,<br> Rockville, MD, U.S.</p>
+
+
+        </div>
+
+      </div>
+
+
+      <div class="row lightbox-gallery padbot_30">
+
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">Subject Matter</h3>
+          <p class="padbot_30 grey-text">Interaction Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC, U.S.</p>
+
+
+        </div>
+
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">USA Today</h3>
+          <p class="padbot_30 grey-text">Graphic Designer,<br> Apr 2017 – Jul 2017,<br> Mclean, VA, U.S.</p>
+
+
+        </div>
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">National Geographic</h3>
+          <p class="padbot_30 grey-text">Graphic Designer,<br> Apr 2016 – Apr 2017,<br> Washington, DC, U.S.</p>
+
+
+        </div>
+
+
+
+      </div>
+
+
+      <div class="row lightbox-gallery">
+
+        <div class="col-lg-4 col-md-12 col-sm-12">
+        </div>
+
+        <div class="col-lg-8 col-md-12 col-sm-12 padbot_30">
+          <h3 class="grey-text">Education</h3>
+        </div>
+      </div>
+
+
+      <div class="row lightbox-gallery">
+
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+
+        <div class="col-lg-8">
+          <h3 class="white-text bottom_15">Corcoran College of Art + Design</h3>
+          <p class="grey-text">Bachelor of Fine Art & Graphic Design<br> 2010 - 2014</p>
+        </div>
+      </div>
+      <div class="row lightbox-gallery top_60">
+        <!--  ================== SPACE DIV ===================== -->
+        <div class="col-lg-4"></div>
+        <!--  ================== SPACE DIV ===================== -->
+
+        <div class="col-lg-8">
+          <a href="/cv/Resume_Peter Verastegui_February_(2022).pdf" target="_blank" download>
+            <button class="site-btn" data-tilt> DOWNLOAD RESUME
+              <i class="icon ion-md-arrow-down"></i>
+            </button>
+          </a>
+        </div>
+      </div>
+    </div>
+    <!--  ======= RESUME - Mobile - End =======  -->
+
+
+    <!-- footer Desktop Start -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-none d-md-block d-lg-block d-xl-block d-xs-none d-sm-none">
+      <div class="container project-detail padtop_15">
+        <div class="row lightbox-gallery">
+          <div class="col-lg-4">
+            <h2 class="white-text subtitle bottom_30">Contact</h2>
+          </div>
+          <div class="col bottom_30">
+            <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
+          </div>
+          <div class="col bottom_30">
+            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
+                aria-hidden="true"></i> </a>
+          </div>
+          <div class="col bottom_30">
+            <p class="white-text">
+              &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
+          </div>
+        </div>
+      </div>
+      </div>
+    </footer>
+    <!-- footer Desktop End-->
+
+    <!-- footer Mobile Start -->
+    <footer id="contact" data-midnight="dark"
+      class="dark-bg padding_90 d-sm-block d-xs-block d-md-none d-lg-none d-xl-none">
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
@@ -399,17 +555,14 @@
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-          </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col-lg-2  bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
+            &nbsp; &nbsp;&nbsp; &nbsp;
+            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i> </a>
+            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
           </div>
-          <div class="col-lg-2 bottom_30">
+          <div class="col-lg-2  bottom_30">
             <p class="white-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
@@ -417,12 +570,13 @@
       </div>
       </div>
     </footer>
+    <!-- footer Mobile End-->
   </main>
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
