--- a/html/spanish/Biodiversity-Festival.html
+++ b/html/spanish/Biodiversity-Festival.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <title>Peter Verastegui | Biodiversity Festival</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Peter Verastegui's Portofolio">
-  <meta name="keywords" content="personal, portfolio">
+  <meta name="description" content="Portafolio de Peter Verastegui">
+  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Portafolio de Peter Verastegui" />
+  <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-  <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.png">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="/img/favico.ico">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -39,7 +41,6 @@
 </head>
 
 <body>
-
   <!-- Preloader -->
   <div id="preloader">
     <svg width="60px" height="60px" viewBox="0 0 100 100">
@@ -51,13 +52,13 @@
       </path>
     </svg>
   </div>
-
   <main>
 
-    <!-- Header
+
+    <!-- HEADER
 ================================================== -->
     <header>
-      <a href="home.html" class="logo float-left"></a>
+      <a href="/html/spanish/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -73,33 +74,36 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="home.html#portfolio">Portfolio</a>
+              <a href="home.html#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="home.html#about">About</a>
+              <a href="/html/spanish/home.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="home.html#resume">Resume</a>
+              <a href="/html/spanish/home.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
-              <a href="home.html#contact">Contact Information</a>
+              <a href="#contact">Contacto</a>
+            </li>
+            <li class="scroll">
+              <a href="/html/english/home.html">English</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-
     <!-- Up to top -->
     <div class="uptotop">
       <div class="holder">
-        <span>Up to top</span>
+        <span>Ir arriba</span>
         <div class="arrow"></div>
       </div>
     </div>
+
 
 
     <!-- Hero Section
@@ -122,7 +126,7 @@
             style="fill:none;stroke:#F2F2F2;stroke-width:20px;" />
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/work-6/Cover-work-6.jpg);"></div>
+      <div class="hero-image" style="background-image: url(/img/works/work-6/Cover-work-6.jpg);"></div>
     </div>
     <!-- ================= Work Intro / Credits - Start ============================ -->
     <section data-midnight="white" class="white-bg">
@@ -130,20 +134,20 @@
         <div class="row lightbox-gallery">
           <div class="col-lg-8">
             <h2 class="title bottom_30">Biodiversity Festival</h2>
-            <p>For this project I was asked to design a variety of deliverables for the events taking place in this
-              festival, I designed a full-page ad for the Express, lot of signs, some take-away items for the NatGeo
-              booth, and; my favorite, the brand for the closing event, which gave me a chance to create some
-              illustrations and an animation. The event was organized by the National Park Service and the National
-              Geographic Society. The festival took palce in the National Mall.</p>
+            <p>El Festival de Biodiversidad es un evento organizado por el servicio de parques nacionales de Estados
+              Unidos y National Geographic. El evento es una oportunidad para que los niños y sus padres aprendan acerca
+              de la naturalesa. Para este proyecto se me encargo el diseño de anuncios en el periódico, el
+              metro, carteles para el festival, y ;mi favorito, el diseño de la identidad visual del evento que cerró
+              el festival.</p>
           </div>
           <div class="col-lg-4">
-            <h2 class="title bottom_30">Credits</h2>
-            <p>Strategy/Marketing Director: Megan Petratis,
-              <br>Marketing Coordinator: Linda Chrapala,
-              <br>Copy Editor/Writer: Jeff Honea,
-              <br>Creative Director: Stos Devaris,
-              <br>Designer: Peter Verastegui,
-              <br>Designer: Mary Zolp
+            <h2 class="title bottom_30">Créditos</h2>
+            <p>Directora de Marketing: Megan Petratis,
+              <br>Coordinadora de Marketing: Linda Chrapala,
+              <br>Escritor Principal: Jeff Honea,
+              <br>Director Creativo: Stos Devaris,
+              <br>Diseñador: Peter Verastegui,
+              <br>Diseñadora: Mary Zolp
             </p>
           </div>
         </div>
@@ -161,10 +165,10 @@
     <div data-midnight="white" class="row white-bg">
       <div class="col-lg-6 bottom_30">
         <img class="image img-fluid float-left right-round-corners"
-          src="img/works/work-6/Express-Ad-Biodiversity-Festival.jpg" alt="Stand">
+          src="/img/works/work-6/Express-Ad-Biodiversity-Festival.jpg" alt="Stand">
       </div>
       <div class="col-lg-6">
-        <img class="image img-fluid float-right left-round-corners" src="img/works/work-6/Kids_drawing@Bioblitz.jpg"
+        <img class="image img-fluid float-right left-round-corners" src="/img/works/work-6/Kids_drawing@Bioblitz.jpg"
           alt="Stand">
       </div>
 
@@ -184,22 +188,21 @@
         <div class="row lightbox-gallery">
           <div class="col-lg-6">
             <h2 class="title">Bug, Bats, & Brews</h2>
-            <p class="">(Grown Ups enternainment at night)</p>
-            <p>Bugs, Bats and Brews was an event where attendees, ages 21 and older, enjoyed some drinks, while host
-              Chris Duffy explored the funny side of animal behavior as he introduced cool people like National
-              Geographic photographer and explorer Anand Varma, Danielle Lee; animal behavior scientist , and
-              conservation biologist/bat expert Rob Mies. Together they talked about trending science myths and bats.
-              This event was for adults to experience the National Mall with a side of laughter, science, and live
-              music.</p>
+            <p class="">(Evento de clausura en la noche)</p>
+            <p>En este evento Chris Duffy, el anfitrión, exploro el lado humorístico de la conducta de los animales
+              mientras presentaba interesantes exploradores de National Geograpic como el fotógrafo Anand Varma, la
+              científica de comportamiento de animales Danielle Lee y el biólogo conservacionista y experto en
+              murciélagos Rob Mies. Juntos ellos hablaron acerca de los mitos mas comunes el la ciencia y acerca de los
+              murciélagos.</p>
 
           </div>
           <div class="col-lg-6">
             <h2 class="title">BioBlitz</h2>
-            <p class="">(Family event during the day)</p>
-            <p>BioBlitz is a fast-paced expedition to discover and document species that thrive in national parks, an
-              initiative that is already over 10 years old. This free national public event, brought together more than
-              200 scientists and naturalists, more than 2,600 students and friends, families; and future scientists, to
-              explore and celebrate biodiversity.</p>
+            <p class="">(Eventos para la familia durante el dia)</p>
+            <p>BioBlitz es un expedición acelerada en la cual se busca descubrir y documentar las especies que prosperan
+              el los parques naciones de Estados Unidos. Este evento que ocurre en todo el país trajo a mas de 200
+              científicos y naturalistas, mas de 2,600 estudiantes, y futuros científicos, a celebrar la biodiversidad
+              explorando sus parques locales.</p>
           </div>
 
         </div>
@@ -210,7 +213,7 @@
 
     <div data-midnight="dark" class="row white-bg">
       <div class="col-lg-6">
-        <img class="image img-fluid right-round-corners bottom_30" src="img/works/work-6/BBB-Hero-Image-1500x994.png"
+        <img class="image img-fluid right-round-corners bottom_30" src="/img/works/work-6/BBB-Hero-Image-1500x994.png"
           alt="Bats, Bugs, & Brews">
       </div>
 
@@ -226,24 +229,22 @@
       <div class="container project-detail">
 
         <div class="row lightbox-gallery">
-          <div class="col-lg-4">
-            <h2 class="title">Animation</h2>
-            <p>The most fun I had on this project came at the time of animating the illustrations I created for the
-              brand. I also had the opportunity to attend the event itself. I have great memories of this job. I extened
-              spaceial thanks to Maya Moore for the photos of the evet which were cortesy of brightestyoungthings.com
+          <div class="col-lg-6">
+            <h2 class="title">Animación Digital</h2>
+            <p>La parte que mas disfrute en este Proyecto fue la de animar las ilustraciones que creé para la identidad
+              visual del evento de clausura. Yo tuve la oportunidad de asistir al evento y tengo unas lindas memorias de
+              este proyecto. Quiero agradecer a Maya Moore por las fotos del evento, las que fueron cortesía de
+              <a href="https://www.brightestyoungthings.com/">brightestyoungthings.com</a>
             </p>
           </div>
-          <div class="col-lg-8">
+
+          <div class="col-lg-6">
             <div class="image bottom_120">
-              <img class="round-corners" src="img/works/work-6/Bugs-Bat-and-Brews.gif" alt="Stand">
+              <img class="round-corners" src="/img/works/work-6/Bugs-Bat-and-Brews.gif" alt="Stand">
             </div>
           </div>
         </div>
       </div>
-    </section>
-
-    <!--======= 3 Images - Without Padding ======= -->
-
     </section>
 
     <!-- ======= Full Screen Image  / Start ========== -->
@@ -252,7 +253,7 @@
       <div class="image lightbox-gallery bottom_30">
         <!-- a image -->
         <div class="col-lg-4 offset-lg-4 col-sm-4 offset-sm-4">
-          <img src="img/works/work-6/BBB-Flying-Bat.gif" alt="">
+          <img src="/img/works/work-6/BBB-Flying-Bat.gif" alt="">
         </div>
         <!-- a image -->
       </div>
@@ -261,8 +262,8 @@
 
     <section>
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="Creating-Change.html">
-          <div class="nav-title">Next Work</div>
+        <a class="next-link" href="/html/spanish/Creating-Change.html">
+          <div class="nav-title">Siguiente</div>
           <div class="next-title">Creating Change</div>
         </a>
       </div>
@@ -273,21 +274,16 @@
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contact Information</h2>
+            <h2 class="white-text subtitle bottom_30">Contacto</h2>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-          </div>
           <div class="col-lg-2 bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
+            &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>
+            </a>
+            &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
@@ -303,9 +299,9 @@
 
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
