--- a/html/spanish/Creating-Change.html
+++ b/html/spanish/Creating-Change.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <title>Peter Verastegui | Creating Change</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Peter Verastegui's Portofolio">
-  <meta name="keywords" content="personal, portfolio">
+  <meta name="description" content="Portafolio de Peter Verastegui">
+  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Portafolio de Peter Verastegui" />
+  <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-  <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.png">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="/img/favico.ico">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -39,7 +41,6 @@
 </head>
 
 <body>
-
   <!-- Preloader -->
   <div id="preloader">
     <svg width="60px" height="60px" viewBox="0 0 100 100">
@@ -51,13 +52,13 @@
       </path>
     </svg>
   </div>
-
   <main>
 
-    <!-- Header
+
+    <!-- HEADER
 ================================================== -->
     <header>
-      <a href="home.html" class="logo float-left"></a>
+      <a href="/html/spanish/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -73,22 +74,22 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="home.html#portfolio">Portfolio</a>
+              <a href="/html/spanish/home.html#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="home.html#about">About</a>
+              <a href="/html/spanish/home.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="home.html#resume">Resume</a>
+              <a href="/html/spanish/home.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
-              <a href="home.html#contact">Contact Information</a>
+              <a href="#contact">Contacto</a>
             </li>
             <li class="scroll">
-              <a href="es.html">Website en Español</a>
+              <a href="/html/english/home.html">English</a>
             </li>
           </ul>
         </div>
@@ -98,16 +99,20 @@
     <!-- Up to top -->
     <div class="uptotop">
       <div class="holder">
-        <span>Up to top</span>
+        <span>Ir arriba</span>
         <div class="arrow"></div>
       </div>
     </div>
+
+
+
+
 
     <!-- Hero Section - Start ================================================== -->
     <div class="hero load" data-midnight="dark" style="height: 963px;">
       <div class="hero-content">
         <div class="inner">
-          <h1 class="title">Creating Change</h1>
+          <h1 class="title">Creando Cambio</h1>
           <span class="category">Branding</span>
         </div>
       </div>
@@ -122,7 +127,7 @@
             style="fill:none;stroke:#F2F2F2;stroke-width:20px;"></path>
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/work-8/Hero-IMG.jpg);"></div>
+      <div class="hero-image" style="background-image: url(/img/works/work-8/Hero-IMG.jpg);"></div>
     </div>
     <!-- Hero Section - End ================================================== -->
 
@@ -132,20 +137,21 @@
       <div class="container project-detail">
         <div class="row lightbox-gallery text">
           <div class="col-lg-8">
-            <h2 class="title bottom_30">Creating Change</h2>
-            <p>Creating Change is a pro bono initiative from Discovery Communications. This Program harnesses the
-              creative team, strategic thinking, and generous spirit of Discovery employees to help nonprofits with
-              marketing, communications, and operational needs. The Program consists of a 12-hour marathon and
-              conference at Discovery, then the following day it culminates with a final project-presentation for the
-              non profits participating.</p>
+            <h2 class="title bottom_30">Creando Cambio</h2>
+            <p>"Creando Cambio" es una iniciativa pro bono de Discovery que ocurre una ves al año, la iniciativa
+              consiste en prestar el talento de sus empleados y su espíritu generoso para ayudar organizaciones sin
+              fines de lucro con marketing, comunicación y estrategias digitales. El evento principal de "Creando
+              Cambio" dura dos días, el primer día comienza con una conferencia seguida por una maratón de trabajo de 12
+              horas, el día dos culmina con la presentación de los proyectos producidos para las organizaciones. Aquel
+              año mi propuesta del branding para "Creando Cambio" fue elegida y implementada.</p>
           </div>
           <div class="col-lg-4">
-            <h2 class="title bottom_30">Credits</h2>
-            <p>Account Director: Anna Anagnostopoulos,
-              <br>Acct. Coordinator: Christina Carr,
-              <br>Creative Director: Janet Daniel,
-              <br>Copy Editor: Shaun Gholston,
-              <br>Designer: Peter Verastegui
+            <h2 class="title bottom_30">Créditos</h2>
+            <p>Director de cuenta: Anna Anagnostopoulos,
+              <br>Coordinadora: Christina Carr,
+              <br>Directora Creativa: Janet Daniel,
+              <br>Redactor: Shaun Gholston,
+              <br>Diseñador: Peter Verastegui
             </p>
           </div>
         </div>
@@ -154,87 +160,97 @@
 
     <!-- ================= Work Intro / Credits - End ============================ -->
 
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white">
-      <img class="img-fluid col align-self-center pr-0 pl-0" src="img/works/work-8/PEOPLE-CC2015.jpg"
-        alt="Social video styleguide">
-    </div>
-    <!-- ======= Full Screen Image / End ========== -->
-
-
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white" class="white-bg">
-      <img class="img-fluid padding_30 col align-self-center pr-0 pl-0" src="img/works/work-8/Pin-CC2015.jpg"
-        alt="Social video styleguide">
-    </div>
-    <!-- ======= Full Screen Image / End ========== -->
-
 
     <!-- ======= Full Screen Image  / Start ========== -->
     <div data-midnight="dark">
-      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/Speaker.jpg" alt="Social video styleguide">
+      <img class="img-fluid col align-self-center p-0" src="/img/works/work-8/Speaker.jpg"
+        alt="Social video styleguide">
+    </div>
+    <!-- ======= Full Screen Image / End ========== -->
+
+
+
+    <!-- ======= Full Screen Image  / Start ========== -->
+    <div data-midnight="white" class="white-bg top_30 bottom_30">
+      <img class="img-fluid col align-self-center p-0" src="/img/works/work-8/ANIMATION-CREATING-CHANGE.gif"
+        alt="Animacin del Logo del evento">
+    </div>
+    <!-- ======= Full Screen Image / End ========== -->
+
+
+
+
+    <!-- ======= Full Screen Image  / Start ========== -->
+    <div data-midnight="white">
+      <img class="img-fluid col align-self-center p-0" src="/img/works/work-8/PEOPLE-CC2015.jpg"
+        alt="Social video styleguide">
     </div>
     <!-- ======= Full Screen Image / End ========== -->
 
 
     <!--======= 3 Images - Without Padding ======= -->
 
-    <div data-midnight="white" class="row white-bg">
+    <div data-midnight="white" class="row white-bg top_30">
       <div class="col-lg-6">
-        <img class="image img-fluid bottom_30 top_30" src="img/works/work-8/CLose-up-of-logo.png" alt="Logo">
+        <img class="image img-fluid bottom_30" src="/img/works/work-8/CLose-up-of-logo.png" alt="Logo">
       </div>
 
       <div class="col-lg-6">
-        <img class="image img-fluid bottom_30 top_30" src="img/works/work-8/Crowd-in-front-of-speaker.png"
-          alt="Opening">
+        <img class="image img-fluid bottom_30" src="/img/works/work-8/Crowd-in-front-of-speaker.png" alt="Opening">
       </div>
     </div>
     <!-- ======= 3 Images - Without Padding ======= -->
 
+
+
+
     <!-- ======= Full Screen Image  / Start ========== 
     <div data-midnight="white">
-      <img class="img-fluid" src="img/works/work-8/Creating-Change-Food-Conference-room-sign.jpg"
+      <img class="img-fluid" src="/img/works/work-8/Creating-Change-Food-Conference-room-sign.jpg"
         alt="Social video styleguide">
     </div>
     ======= Full Screen Image / End ========== -->
 
 
 
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white" class="white-bg">
-      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/ANIMATION-CREATING-CHANGE.gif"
-        alt="Social video styleguide">
-    </div>
-    <!-- ======= Full Screen Image / End ========== -->
+
 
 
     <!-- ======= 3 Images - Without Padding ======= Start-->
-    <div data-midnight="dark" class="row lightbox-gallery padtop_30 white-bg">
+    <div data-midnight="dark" class="row lightbox-gallery white-bg">
       <div class="col-lg-4">
         <div class="image bottom_30">
-          <img src="img/works/work-8/meeting-room.png" alt="Stand">
+          <img src="/img/works/work-8/meeting-room.png" alt="Stand">
         </div>
       </div>
       <div class="col-lg-4">
         <div class="image bottom_30">
-          <img src="img/works/work-8/Team-Posing.png" alt="Stand">
+          <img src="/img/works/work-8/Team-Posing.png" alt="Stand">
         </div>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 bottom_30">
         <div class="image">
-          <img src="img/works/work-8/Creating-Change-Cofee-sign.png" alt="Stand">
+          <img src="/img/works/work-8/Creating-Change-Cofee-sign.png" alt="Stand">
         </div>
       </div>
     </div>
     <!-- ======= 3 Images - Without Padding ======= End-->
 
+    <!-- ======= Full Screen Image  / Start ========== -->
+    <div data-midnight="white" class="white-bg">
+      <img class="img-fluid col align-self-center p-0" src="/img/works/work-8/Pin-CC2015.jpg"
+        alt="Social video styleguide">
+    </div>
+    <!-- ======= Full Screen Image / End ========== -->
+
+
     <div data-midnight="white" class="row white-bg">
       <div class="col-lg-6">
-        <img class="image img-fluid bottom_30" src="img/works/work-8/Hoddies.jpg" alt="Logo">
+        <img class="image img-fluid top_30" src="/img/works/work-8/Hoddies.jpg" alt="Logo">
       </div>
 
       <div class="col-lg-6">
-        <img class="image img-fluid bottom_30" src="img/works/work-8/Creating-Change-Food-Conference-room-sign.jpg"
+        <img class="image img-fluid top_30" src="/img/works/work-8/Creating-Change-Food-Conference-room-sign.jpg"
           alt="Opening">
       </div>
     </div>
@@ -242,36 +258,30 @@
 
 
     <!-- ======= Next Page / Start ========== -->
-    <section class="white-bg">
+    <section class="white-bg" data-midnight="white">
       <div class="col-lg-12 text-center">
-        <a class=" next-link" href="Storytelling-Bootcamp.html">
-          <div class="nav-title">Next Work</div>
+        <a class=" next-link" href="es-Storytelling-Bootcamp.html">
+          <div class="nav-title">Siguiente</div>
           <div class="next-title">Storytelling Bootcamp</div>
         </a>
       </div>
     </section>
-    <!-- ======= Next Page / End ========== -->
 
     <!-- footer -->
     <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contact Information</h2>
+            <h2 class="white-text subtitle bottom_30">Contacto</h2>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
-          </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
@@ -286,9 +296,9 @@
   </main>
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
