--- a/html/spanish/Galaxy.html
+++ b/html/spanish/Galaxy.html
@@ -13,7 +13,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,10 +21,10 @@
 <![endif]-->
 
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="img/favico.ico">
+  <link rel="shortcut icon" href="/img/favico.ico">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -58,7 +58,7 @@
     <!-- HEADER
 ================================================== -->
     <header>
-      <a href="es.html" class="logo float-left"></a>
+      <a href="/html/spanish/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -80,16 +80,16 @@
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="es.html#about">Acerca de mi</a>
+              <a href="/html/spanish/home.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="es.html#resume">Currículum Vitae</a>
+              <a href="/html/spanish/home.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
               <a href="#contact">Contacto</a>
             </li>
             <li class="scroll">
-              <a href="home.html">Website in English</a>
+              <a href="/html/english/home.html">English</a>
             </li>
           </ul>
         </div>
@@ -128,7 +128,7 @@
             style="fill:none;stroke:#F2F2F2;stroke-width:20px;" />
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/Galaxy/Hero-Image-Galaxy.png);opacity: 1;"></div>
+      <div class="hero-image" style="background-image: url(/img/works/Galaxy/Hero-Image-Galaxy.png);opacity: 1;"></div>
     </div>
 
 
@@ -148,7 +148,7 @@
         </div>
 
         <div class="col-lg-10 offset-lg-1 col-md-12 col-sm-12 cl-xs-12 image">
-          <img class="bottom_30 round-corners" src="img/works/Galaxy/Will-Smith-in-Men-in-Black-noisy-cricket.png"
+          <img class="bottom_30 round-corners" src="/img/works/Galaxy/Will-Smith-in-Men-in-Black-noisy-cricket.png"
             alt="Will-Smith">
         </div>
         <div class="container project-detail top_30 bottom_60 col-lg-8 offset-lg-2">
@@ -178,7 +178,7 @@
       <div class="container project-detail ">
         <div class="row lightbox-gallery bottom_60">
           <div class="image col-lg-2 offset-lg-5 col-md-2 offset-md-5">
-            <img src="img/works/Galaxy/Step_1.svg" alt="Step One">
+            <img src="/img/works/Galaxy/Step_1.svg" alt="Step One">
           </div>
         </div>
         <div class="row">
@@ -193,7 +193,7 @@
         <div class="row lightbox-gallery justify-content-center">
           <div class="col-lg-3">
             <div class="image">
-              <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
+              <img src="/img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
             </div>
             <h2 class="subtitle white-text bottom_30">Agente "J"</h2>
             <p class="grey-text">En el trabajo las cosas se puede volverse trágicas en cualquier momento. Algunos
@@ -204,12 +204,12 @@
               cuerpo
               al tocar la puerta de un criminal y no saber que esperar.</p>
             <div class="image top_30">
-              <img src="img/works/Galaxy/Users/Asignado-Workflow-1.svg" alt="Asignado">
+              <img src="/img/works/Galaxy/Users/Asignado-Workflow-1.svg" alt="Asignado">
             </div>
           </div>
           <div class="col-lg-3">
             <div class="image">
-              <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
+              <img src="/img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
             </div>
             <h2 class="subtitle white-text bottom_30">Supervisor</h2>
             <p class="project-detail grey-text">Mis colegas ponen sus vidas en riesgo todos los días y, como su
@@ -218,12 +218,12 @@
               seguridad y asistirlos en lo que necesiten. «su seguridad es esencial, sin importar lo que cueste».
             </p>
             <div class="image top_30">
-              <img src="img/works/Galaxy/Users/el-supervisor-workflow-2.svg" alt="Supervisor">
+              <img src="/img/works/Galaxy/Users/el-supervisor-workflow-2.svg" alt="Supervisor">
             </div>
           </div>
           <div class="col-lg-3">
             <div class="image">
-              <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
+              <img src="/img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
             </div>
             <h2 class="subtitle white-text bottom_30">Directora Financiera</h2>
             <p class="grey-text">Yo estoy encargada del dinero, a mi parecer algunas personas creen que todas las
@@ -233,7 +233,7 @@
               del problema no ellos, ¿qué creen? el dinero no crece en los arboles. El presupuesto fiscal no es
               infinito.</p>
             <div class="image top_30">
-              <img src="img/works/Galaxy/Users/Directora-Financiera-Workflow-3.svg" alt="Directora-Financiera">
+              <img src="/img/works/Galaxy/Users/Directora-Financiera-Workflow-3.svg" alt="Directora-Financiera">
             </div>
           </div>
         </div>
@@ -246,7 +246,7 @@
       <div class="container project-detail">
         <div class="row lightbox-gallery bottom_60">
           <div class="image col-lg-2 offset-lg-5 col-md-2 offset-md-5">
-            <img src="img/works/Galaxy/Step_2.svg" alt="Step Two">
+            <img src="/img/works/Galaxy/Step_2.svg" alt="Step Two">
           </div>
         </div>
         <div class="row">
@@ -269,7 +269,7 @@
           <!-- a image -->
           <div class="col-lg-5 offset-lg-1">
             <div class="image bottom_60">
-              <img class="round-corners" src="img/works/Galaxy/Screens/New-Request-Low-Fidelity.png"
+              <img class="round-corners" src="/img/works/Galaxy/Screens/New-Request-Low-Fidelity.png"
                 alt="New Request Low Fidelity">
             </div>
           </div>
@@ -282,7 +282,7 @@
           <!-- a image -->
           <div class="col-lg-5 offset-lg-1">
             <div class="image bottom_60">
-              <img class="round-corners" src="img/works/Galaxy/Screens/Security-Ledger-Low-Fidelity.png"
+              <img class="round-corners" src="/img/works/Galaxy/Screens/Security-Ledger-Low-Fidelity.png"
                 alt="Request Ledger">
             </div>
           </div>
@@ -323,7 +323,7 @@
           </div>
         </div>
         <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-          <img class="image" src="img/works/Galaxy/Screens/V-2/LOGIN-SCREEN.png" alt="Log In">
+          <img class="image" src="/img/works/Galaxy/Screens/V-2/LOGIN-SCREEN.png" alt="Log In">
         </div>
       </div>
     </section>
@@ -350,12 +350,12 @@
               data-items-tablet-small="1">
 
               <div class="item">
-                <img class="d-block w-100 round-corners" src="img/works/Galaxy/Screens/V-2/Facility-Profile.svg"
+                <img class="d-block w-100 round-corners" src="/img/works/Galaxy/Screens/V-2/Facility-Profile.svg"
                   alt="Dark Theme" />
               </div>
 
               <div class="item">
-                <img class="d-block w-100 round-corners" src="img/works/Galaxy/Screens/V-2/Light-Theme.svg"
+                <img class="d-block w-100 round-corners" src="/img/works/Galaxy/Screens/V-2/Light-Theme.svg"
                   alt="Light Theme" />
               </div>
 
@@ -380,7 +380,7 @@
           <!-- a image -->
           <div class="col-lg-10 offset-lg-1">
             <div class="image bottom_60">
-              <img class="round-corners" src="img/works/Galaxy/Screens/V-2/New-Request.png" alt="New Request">
+              <img class="round-corners" src="/img/works/Galaxy/Screens/V-2/New-Request.png" alt="New Request">
             </div>
           </div>
         </div>
@@ -400,7 +400,7 @@
           <!-- a image -->
           <div class="col-lg-10 offset-lg-1">
             <div class="image bottom_60">
-              <img class="round-corners" src="img/works/Galaxy/Screens/V-2/Request-Ledger.png" alt="Request Ledger">
+              <img class="round-corners" src="/img/works/Galaxy/Screens/V-2/Request-Ledger.png" alt="Request Ledger">
             </div>
           </div>
         </div>
@@ -410,7 +410,7 @@
           <!-- a image -->
           <div class="col-lg-10 offset-lg-1">
             <div class="image">
-              <img class="round-corners" src="img/works/Galaxy/Screens/V-2/Received-Request.png" alt="Approve/Deny">
+              <img class="round-corners" src="/img/works/Galaxy/Screens/V-2/Received-Request.png" alt="Approve/Deny">
             </div>
           </div>
         </div>
@@ -421,7 +421,7 @@
     <section data-midnight="dark" class="galaxy-bg-purple-gradient container lightbox-gallery" id="three">
       <div class="row lightbox-gallery">
         <div class="image col-lg-2 offset-lg-5 col-md-2 offset-md-5">
-          <img src="img/works/Galaxy/Step_3.svg" alt="Step Three">
+          <img src="/img/works/Galaxy/Step_3.svg" alt="Step Three">
         </div>
       </div>
       <div class="row">
@@ -431,7 +431,7 @@
       </div>
 
       <div class="col-lg-4 offset-lg-4 col-sm-4 offset-sm-4 image">
-        <img src="img/works/Galaxy/GALAXY-LOGO.svg" alt="Logo">
+        <img src="/img/works/Galaxy/GALAXY-LOGO.svg" alt="Logo">
       </div>
 
     </section>
@@ -440,11 +440,11 @@
         <h2 class="text title white-text text-center">Colores</h2>
       </div>
       <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-        <img src="img/works/Galaxy/Galaxy-Secondary-Colors.svg" alt="Logo">
+        <img src="/img/works/Galaxy/Galaxy-Secondary-Colors.svg" alt="Logo">
         <p class="text-center white-text top_15">Secundarios</p>
       </div>
       <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-        <img src="img/works/Galaxy/Galaxy-Primary-Colors.svg" alt="Logo">
+        <img src="/img/works/Galaxy/Galaxy-Primary-Colors.svg" alt="Logo">
         <p class="text-center white-text top_15">Primarios</p>
       </div>
     </section>
@@ -453,7 +453,7 @@
         <h2 class="text title white-text text-center">Typografia</h2>
       </div>
       <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-        <img src="img/works/Galaxy/Ezzo-Font-Family.svg" alt="Ezzo Font Family">
+        <img src="/img/works/Galaxy/Ezzo-Font-Family.svg" alt="Ezzo Font Family">
         <p class="text-center white-text top_15">Familia tipográfica</p>
       </div>
     </section>
@@ -462,7 +462,7 @@
         <h2 class="text title text-center">Iconografia</h2>
       </div>
       <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-        <img src="img/works/Galaxy/Icons-for-Galaxy.svg" alt="Icons">
+        <img src="/img/works/Galaxy/Icons-for-Galaxy.svg" alt="Icons">
         <p class="text-center white-text top_15">Iconos</p>
       </div>
     </section>
@@ -471,7 +471,7 @@
         <h2 class="white-text title text-center">Componentes de la interfaz de usuario (UI)</h2>
       </div>
       <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-        <img src="img/works/Galaxy/UI-Components.svg" alt="Dark UI Components">
+        <img src="/img/works/Galaxy/UI-Components.svg" alt="Dark UI Components">
       </div>
     </section>
     <section data-midnight="dark" class="galaxy-bg-to-black">
@@ -484,7 +484,7 @@
           <!-- a image -->
           <div class="col-lg-10 offset-lg-1">
             <div class="image top_60">
-              <img class="round-corners" src="img/works/Galaxy/Screens/V-2/Individual-Profile.png"
+              <img class="round-corners" src="/img/works/Galaxy/Screens/V-2/Individual-Profile.png"
                 alt="Profile of a villain">
             </div>
           </div>
@@ -547,16 +547,11 @@
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-          </div>
           <div class="col-lg-2 bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
@@ -572,9 +567,9 @@
 
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
