--- a/html/spanish/Gallo-Guapo.html
+++ b/html/spanish/Gallo-Guapo.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <title>Peter Verastegui | Creating Change</title>
+  <title>Peter Verastegui | Gallo Guapo</title>
   <meta charset="UTF-8">
   <meta name="description" content="Portafolio de Peter Verastegui">
   <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
@@ -13,7 +13,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,10 +21,10 @@
 <![endif]-->
 
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="img/favico.ico">
+  <link rel="shortcut icon" href="/img/favico.ico">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -58,7 +58,7 @@
     <!-- HEADER
 ================================================== -->
     <header>
-      <a href="es.html" class="logo float-left"></a>
+      <a href="/html/spanish/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -80,16 +80,16 @@
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="es.html#about">Acerca de mi</a>
+              <a href="/html/spanish/home.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="es.html#resume">Currículum Vitae</a>
+              <a href="/html/spanish/home.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
               <a href="#contact">Contacto</a>
             </li>
             <li class="scroll">
-              <a href="home.html">Website in English</a>
+              <a href="/html/english/home.html">English</a>
             </li>
           </ul>
         </div>
@@ -107,12 +107,11 @@
 
 
 
-
     <!-- Hero Section - Start ================================================== -->
     <div class="hero load" data-midnight="dark" style="height: 963px;">
       <div class="hero-content">
         <div class="inner">
-          <h1 class="title">Creando Cambio</h1>
+          <h1 class="title">Gallo Guapo</h1>
           <span class="category">Branding</span>
         </div>
       </div>
@@ -127,143 +126,86 @@
             style="fill:none;stroke:#F2F2F2;stroke-width:20px;"></path>
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/work-8/Hero-IMG.jpg);"></div>
+      <div class="hero-image" style="background-image: url(/img/works/work-5/Foodtruck-Gallo-Guapo-Cover.png);"></div>
     </div>
     <!-- Hero Section - End ================================================== -->
-
-    <!-- ================= Work Intro / Credits - Start ============================ -->
-
-    <section data-midnight="white" class="white-bg">
-      <div class="container project-detail">
-        <div class="row lightbox-gallery text">
-          <div class="col-lg-8">
-            <h2 class="title bottom_30">Creando Cambio</h2>
-            <p>"Creando Cambio" es una iniciativa pro bono de Discovery que ocurre una ves al año, la iniciativa
-              consiste en prestar el talento de sus empleados y su espíritu generoso para ayudar organizaciones sin
-              fines de lucro con marketing, comunicación y estrategias digitales. El evento principal de "Creando
-              Cambio" dura dos días, el primer día comienza con una conferencia seguida por una maratón de trabajo de 12
-              horas, el día dos culmina con la presentación de los proyectos producidos para las organizaciones. Aquel
-              año mi propuesta del branding para "Creando Cambio" fue elegida y implementada.</p>
-          </div>
-          <div class="col-lg-4">
-            <h2 class="title bottom_30">Créditos</h2>
-            <p>Director de cuenta: Anna Anagnostopoulos,
-              <br>Coordinadora: Christina Carr,
-              <br>Directora Creativa: Janet Daniel,
-              <br>Redactor: Shaun Gholston,
-              <br>Diseñador: Peter Verastegui
-            </p>
+    <!-- Work Content ================================================== -->
+    <section data-midnight="white" class="padding_90 yellow">
+      <!-- Images -->
+      <div class="row lightbox-gallery">
+        <!-- a image -->
+        <div class="col-lg-12">
+          <div class="image">
+            <img src="/img/works/work-5/Wall-Design-Illustration-Restaurant.jpg" alt="Illustration">
           </div>
         </div>
+        <!-- a image -->
+        <div class="col-lg-6">
+          <div class="image">
+            <img src="/img/works/work-5/Poster-Gallo-Guapo-Restaurant-1.jpg" alt="Poster Design">
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="image">
+            <img src="/img/works/work-5/Stationary-Group-Restaurant-Gallo-Guapo.jpg" alt="Branding on stationary">
+          </div>
+        </div>
+
+        <!-- a image -->
+        <div class="col-lg-12">
+          <div class="image">
+            <img src="/img/works/work-5/LOGO-Signature-Gallo-Guapo-Restaurant.jpg" alt="Logo">
+          </div>
+        </div>
+        <!-- a image -->
+
+        <!-- a image -->
+        <div class="col-lg-6">
+          <div class="image">
+            <img src="/img/works/work-5/Apron-Restaurant-Gallo-Guapo-1.jpg" alt="Apron Branding">
+          </div>
+        </div>
+        <!-- a image -->
+
+
+        <!-- a image -->
+        <div class="col-lg-6">
+          <div class="image">
+            <img src="/img/works/work-5/Poster-Gallo-Guapo-Restaurant-2.jpg" alt="Poster Design">
+          </div>
+        </div>
+
+        <!-- a image -->
+        <div class="col-lg-12">
+          <div class="image">
+            <img src="/img/works/work-5/Wall-Gallo-Guapo-Restaurant.jpg" alt="Restaurant Branding">
+          </div>
+        </div>
+        <!-- a image -->
+
+        <!-- a image -->
+        <div class="col-lg-12">
+          <div class="image">
+            <img src="/img/works/work-5/Foodtruck-Back-GalloGuapo.jpg" alt="Food truck branding">
+          </div>
+        </div>
+        <div class="col-lg-12">
+          <div class="image">
+            <img src="/img/works/work-5/Stationary-restaurant-gallo-guapo.jpg" alt="All branded items">
+          </div>
+        </div>
+        <!-- a image -->
       </div>
     </section>
 
-    <!-- ================= Work Intro / Credits - End ============================ -->
-
-
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="dark">
-      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/Speaker.jpg" alt="Social video styleguide">
-    </div>
-    <!-- ======= Full Screen Image / End ========== -->
-
-
-
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white" class="white-bg top_30 bottom_30">
-      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/ANIMATION-CREATING-CHANGE.gif"
-        alt="Animacin del Logo del evento">
-    </div>
-    <!-- ======= Full Screen Image / End ========== -->
-
-
-
-
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white">
-      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/PEOPLE-CC2015.jpg"
-        alt="Social video styleguide">
-    </div>
-    <!-- ======= Full Screen Image / End ========== -->
-
-
-    <!--======= 3 Images - Without Padding ======= -->
-
-    <div data-midnight="white" class="row white-bg top_30">
-      <div class="col-lg-6">
-        <img class="image img-fluid bottom_30" src="img/works/work-8/CLose-up-of-logo.png" alt="Logo">
-      </div>
-
-      <div class="col-lg-6">
-        <img class="image img-fluid bottom_30" src="img/works/work-8/Crowd-in-front-of-speaker.png" alt="Opening">
-      </div>
-    </div>
-    <!-- ======= 3 Images - Without Padding ======= -->
-
-
-
-
-    <!-- ======= Full Screen Image  / Start ========== 
-    <div data-midnight="white">
-      <img class="img-fluid" src="img/works/work-8/Creating-Change-Food-Conference-room-sign.jpg"
-        alt="Social video styleguide">
-    </div>
-    ======= Full Screen Image / End ========== -->
-
-
-
-
-
-
-    <!-- ======= 3 Images - Without Padding ======= Start-->
-    <div data-midnight="dark" class="row lightbox-gallery white-bg">
-      <div class="col-lg-4">
-        <div class="image bottom_30">
-          <img src="img/works/work-8/meeting-room.png" alt="Stand">
-        </div>
-      </div>
-      <div class="col-lg-4">
-        <div class="image bottom_30">
-          <img src="img/works/work-8/Team-Posing.png" alt="Stand">
-        </div>
-      </div>
-      <div class="col-lg-4 bottom_30">
-        <div class="image">
-          <img src="img/works/work-8/Creating-Change-Cofee-sign.png" alt="Stand">
-        </div>
-      </div>
-    </div>
-    <!-- ======= 3 Images - Without Padding ======= End-->
-
-    <!-- ======= Full Screen Image  / Start ========== -->
-    <div data-midnight="white" class="white-bg">
-      <img class="img-fluid col align-self-center p-0" src="img/works/work-8/Pin-CC2015.jpg"
-        alt="Social video styleguide">
-    </div>
-    <!-- ======= Full Screen Image / End ========== -->
-
-
-    <div data-midnight="white" class="row white-bg">
-      <div class="col-lg-6">
-        <img class="image img-fluid top_30" src="img/works/work-8/Hoddies.jpg" alt="Logo">
-      </div>
-
-      <div class="col-lg-6">
-        <img class="image img-fluid top_30" src="img/works/work-8/Creating-Change-Food-Conference-room-sign.jpg"
-          alt="Opening">
-      </div>
-    </div>
-
-
-
-    <!-- ======= Next Page / Start ========== -->
-    <section class="white-bg" data-midnight="white">
+    <section class="white-bg">
       <div class="col-lg-12 text-center">
-        <a class=" next-link" href="es-Storytelling-Bootcamp.html">
+        <a class="next-link" href="es-UI-UX-Illustrations.html">
           <div class="nav-title">Siguiente</div>
-          <div class="next-title">Storytelling Bootcamp</div>
+          <div class="next-title">UI/UX ilustración de personajes</div>
         </a>
       </div>
+
     </section>
 
     <!-- footer -->
@@ -276,16 +218,11 @@
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-          </div>
           <div class="col-lg-2 bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
@@ -299,14 +236,16 @@
 
   </main>
 
+
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
   </script>
+
 
 
 </body>
