--- a/html/spanish/Library-of-Congress.html
+++ b/html/spanish/Library-of-Congress.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
-  <title>Peter Verastegui | Portfolio</title>
+  <title>Peter Verastegui | library of Congress</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Peter Verastegui's Portofolio">
-  <meta name="keywords" content="personal, portfolio">
+  <meta name="description" content="Portafolio de Peter Verastegui">
+  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Portafolio de Peter Verastegui" />
+  <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
-  <!-- FAVICON  -->
-  <link rel="shortcut icon" href="img/favico.png">
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="/img/favico.ico">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -39,7 +41,6 @@
 </head>
 
 <body>
-
   <!-- Preloader -->
   <div id="preloader">
     <svg width="60px" height="60px" viewBox="0 0 100 100">
@@ -51,13 +52,13 @@
       </path>
     </svg>
   </div>
-
   <main>
 
-    <!-- Header
+
+    <!-- HEADER
 ================================================== -->
     <header>
-      <a href="home.html" class="logo float-left"></a>
+      <a href="/html/spanish/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -73,22 +74,22 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="home.html#portfolio">Portfolio</a>
+              <a href="es.html#portfolio">Portafolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="home.html#about">About</a>
+              <a href="/html/spanish/home.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="home.html#resume">Resume</a>
+              <a href="/html/spanish/home.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
-              <a href="home.html#contact">Contact Information</a>
+              <a href="#contact">Contacto</a>
             </li>
             <li class="scroll">
-              <a href="es.html">Website en Español</a>
+              <a href="/html/english/home.html">English</a>
             </li>
           </ul>
         </div>
@@ -98,17 +99,21 @@
     <!-- Up to top -->
     <div class="uptotop">
       <div class="holder">
-        <span>Up to top</span>
+        <span>Ir arriba</span>
         <div class="arrow"></div>
       </div>
     </div>
+
+
+
+
 
     <!-- Hero Section
 ================================================== -->
     <div class="hero" data-midnight="dark">
       <div class="hero-content">
         <div class="inner">
-          <h1 class="title">Library of Congress</h1>
+          <h1 class="title">Biblioteca del Congreso</h1>
           <span class="category">UI/UX</span>
         </div>
       </div>
@@ -123,7 +128,7 @@
             style="fill:none;stroke:#F2F2F2;stroke-width:20px;" />
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/work-7/Cover-IMG.png);"></div>
+      <div class="hero-image" style="background-image: url(/img/works/work-7/Cover-IMG.png);"></div>
     </div>
 
     <!-- Work Content
@@ -132,18 +137,19 @@
       <div class="container project-detail">
         <div class="row lightbox-gallery">
           <div class="col-lg-8 ">
-            <h2 class="title bottom_30">Website Navigation</h2>
-            <p>In this project I sought to improve navigation on the website of the United States Library of Congress,
-              when studying the page I realized that the information architecture was surprisingly coherent, once you
-              give it a chance. However, the lack of visual hierarchy complicates navigation. The page in general was
-              not very difficult to understand but it was not as intuitive as possible, with respect to helping the user
-              to orient themselves within so much information; which at times became overwhelming.</p>
+            <h2 class="title bottom_30">Navegación Web</h2>
+            <p>En este proyecto busqué mejorar la navegación en la pagina web de la biblioteca del congreso de los
+              Estados Unidos, al estudiar la pagina me di cuenta que la arquitectura de la información era
+              sorprendentemente coherente, una ves le das una oportunidad. Sin embargo la falta de jerarquía visual
+              complica la navegación. La pagina en general no era muy difícil de entender pero no era lo mas intuitiva
+              posible, con respecto a ayudar al usuario a orientarse dentro de tanta información; la cual por momentos
+              se volvía abrumadora.</p>
           </div>
           <div class="col-lg-4 ">
-            <h2 class="title bottom_30">Credits</h2>
-            <p>School: Corcoran College of Art + Design,
+            <h2 class="title bottom_30">Créditos</h2>
+            <p>Universidad: Corcoran College of Art + Design,
               <br>Instructor: David Ramos,
-              <br>Student: Peter Verastegui
+              <br>Estudiante: Peter Verastegui
             </p>
           </div>
         </div>
@@ -153,17 +159,17 @@
       <div class="row no-gutter">
         <div class="col-lg-4 ">
           <div class="image top_45 bottom_45">
-            <img src="img/works/work-7/LOC_Sketch_01.png" alt="">
+            <img src="/img/works/work-7/LOC_Sketch_01.png" alt="">
           </div>
         </div>
         <div class="col-lg-4">
           <div class="image top_45 bottom_45">
-            <img src="img/works/work-7/LOC_Sketch_02.png" alt="">
+            <img src="/img/works/work-7/LOC_Sketch_02.png" alt="">
           </div>
         </div>
         <div class="col-lg-4">
           <div class="image top_45 bottom_45">
-            <img src="img/works/work-7/LOC_Sketch_03.png" alt="">
+            <img src="/img/works/work-7/LOC_Sketch_03.png" alt="">
           </div>
         </div>
       </div>
@@ -172,21 +178,22 @@
       <div class="container project-detail">
         <div class="row lightbox-gallery">
           <div class="col-lg-6">
-            <h2 class="title bottom_30">Education</h2>
-            <p>In this section you'll find articles, lesson plans, and classroom material like videos and images. So a
-              new "search" and "advance search bar is needed, also a better list that display the result of a search.
+            <h2 class="title bottom_30">Educación</h2>
+            <p>En esta sección encontraras artículos, plantillas para lecciones, y material educativo como videos y
+              imágenes. Aquí se necesita una nueva barra de búsqueda y búsqueda avanzada, lo cual implica también una
+              nueva lista de resultados.
             </p>
           </div>
           <div class="col-lg-6">
-            <h2 class="title bottom_30">Visit</h2>
-            <p>in this section people can find about events like lectures, exhibits, concerts , tours, directions, maps,
-              and general information such as phone numbers for each department and hours of operation. This section
-              needs the most help.</p>
+            <h2 class="title bottom_30">Visitar</h2>
+            <p>En esta sección los usuarios encuentra información acerca de eventos como conferencias, exhibiciones,
+              conciertos, direcciones de los distintos edificios de la biblioteca, mapas, y información en general como
+              números de teléfono y horas de atención, esta parte es la que necesita de mas ayuda. </p>
           </div>
         </div>
     </section>
     <div data-midnight="white">
-      <img class="img-fluid" src="img/works/work-7/COLOR-PALETTE.png" alt="Social video styleguide">
+      <img class="img-fluid" src="/img/works/work-7/COLOR-PALETTE.png" alt="Social video styleguide">
     </div>
     <section data-midnight="white" class="padding_90 lightgrey-bg">
       <!-- Images -->
@@ -194,14 +201,14 @@
         <!-- a image -->
         <div class="col-lg-10 offset-lg-1">
           <div class="image">
-            <img src="img/works/work-7/Library-of-Congres-Website-2.png" alt="">
+            <img src="/img/works/work-7/Library-of-Congres-Website-2.png" alt="">
           </div>
         </div>
         <!-- a image -->
       </div>
     </section>
     <div data-midnight="white" class="project-detail padding_60">
-      <h3 class=" text subtitle text-center">Education</h3>
+      <h3 class=" text subtitle text-center">Educación</h3>
     </div>
 
     <section data-midnight="white" class="padding_90 lightgrey-bg">
@@ -210,7 +217,7 @@
         <!-- a image -->
         <div class="col-lg-10 offset-lg-1">
           <div class="image">
-            <img src="img/works/work-7/LOC_Large_Screens-Education.png" alt="Desktop screens">
+            <img src="/img/works/work-7/LOC_Large_Screens-Education.png" alt="Desktop screens">
           </div>
         </div>
         <!-- a image -->
@@ -218,7 +225,7 @@
     </section>
 
     <div data-midnight="white" class="project-detail padding_60">
-      <h3 class=" text subtitle text-center">Visit</h3>
+      <h3 class=" text subtitle text-center">Visitar</h3>
     </div>
 
     <section data-midnight="white" class="padding_90 lightgrey-bg">
@@ -227,16 +234,16 @@
         <!-- a image -->
         <div class="col-lg-10 offset-lg-1">
           <div class="image">
-            <img src="img/works/work-7/LOC_small_device_Screens-Visit.png" alt="Mobile screens">
+            <img src="/img/works/work-7/LOC_small_device_Screens-Visit.png" alt="Mobile screens">
           </div>
         </div>
         <!-- a image -->
       </div>
     </section>
-    <section>
+    <section data-midnight="white">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="Galaxy.html">
-          <div class="nav-title">Next Work</div>
+        <a class="next-link" href="es-Galaxy.html">
+          <div class="nav-title">Siguiente</div>
           <div class="next-title">Galaxy</div>
         </a>
       </div>
@@ -247,21 +254,16 @@
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contact Information</h2>
+            <h2 class="white-text subtitle bottom_30">Contacto</h2>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
-          </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
@@ -272,13 +274,14 @@
       </div>
       </div>
     </footer>
+
   </main>
 
 
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
