--- a/html/spanish/Racing-Extinction.html
+++ b/html/spanish/Racing-Extinction.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <title>Peter Verastegui | Gallo Guapo</title>
+  <title>Peter Verastegui | Racing Extinction</title>
   <meta charset="UTF-8">
   <meta name="description" content="Portafolio de Peter Verastegui">
   <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
@@ -13,7 +13,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,10 +21,10 @@
 <![endif]-->
 
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="img/favico.ico">
+  <link rel="shortcut icon" href="/img/favico.ico">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -58,7 +58,7 @@
     <!-- HEADER
 ================================================== -->
     <header>
-      <a href="es.html" class="logo float-left"></a>
+      <a href="/html/spanish/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -80,16 +80,16 @@
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="es.html#about">Acerca de mi</a>
+              <a href="/html/spanish/home.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="es.html#resume">Currículum Vitae</a>
+              <a href="/html/spanish/home.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
               <a href="#contact">Contacto</a>
             </li>
             <li class="scroll">
-              <a href="home.html">Website in English</a>
+              <a href="/html/english/home.html">English</a>
             </li>
           </ul>
         </div>
@@ -107,105 +107,125 @@
 
 
 
-    <!-- Hero Section - Start ================================================== -->
-    <div class="hero load" data-midnight="dark" style="height: 963px;">
+
+    <!-- Hero Section - Start
+================================================== -->
+    <div class="hero" data-midnight="dark">
       <div class="hero-content">
         <div class="inner">
-          <h1 class="title">Gallo Guapo</h1>
-          <span class="category">Branding</span>
+          <h1 class="title">Racing Extinction</h1>
+          <span class="category">Illustration</span>
         </div>
       </div>
       <!-- Down Icon -->
       <div class="down-icon white" data-wow-delay="1.7s">
         <svg width="26px" height="100%" viewBox="0 0 247 390" version="1.1" xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
-          <path id="wheel" d="M123.359,79.775l0,72.843" style="fill:none;stroke:#F2F2F2;stroke-width:20px;"></path>
+          xmlns:xlink="http://www.w3.org/1999/xlink" style="
+              fill-rule: evenodd;
+              clip-rule: evenodd;
+              stroke-linecap: round;
+              stroke-linejoin: round;
+              stroke-miterlimit: 1.5;
+            ">
+          <path id="wheel" d="M123.359,79.775l0,72.843" style="fill: none; stroke: #f2f2f2; stroke-width: 20px;" />
           <path id="mouse"
             d="M236.717,123.359c0,-62.565 -50.794,-113.359 -113.358,-113.359c-62.565,0 -113.359,50.794 -113.359,113.359l0,143.237c0,62.565 50.794,113.359 113.359,113.359c62.564,0 113.358,-50.794 113.358,-113.359l0,-143.237Z"
-            style="fill:none;stroke:#F2F2F2;stroke-width:20px;"></path>
+            style="fill: none; stroke: #f2f2f2; stroke-width: 20px;" />
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/work-5/Foodtruck-Gallo-Guapo-Cover.png);"></div>
+      <div class="hero-image" style="background-image: url(/img/works/work-3/work-3-bkgrd.png);"></div>
     </div>
-    <!-- Hero Section - End ================================================== -->
-    <!-- Work Content ================================================== -->
-    <section data-midnight="white" class="padding_90 yellow">
-      <!-- Images -->
+    <!-- Hero Section - End
+================================================== -->
+
+    <!-- Work Content
+================================================== -->
+
+    <div data-midnight="white" class="container project-detail padtop_60">
       <div class="row lightbox-gallery">
-        <!-- a image -->
-        <div class="col-lg-12">
-          <div class="image">
-            <img src="img/works/work-5/Wall-Design-Illustration-Restaurant.jpg" alt="Illustration">
+        <div class="col-lg-8">
+          <h2 class="title">Racing Extinction</h2>
+          <p>
+            En el documental 'Racing Extinction: Cuenta Regresiva' el director y ganador del Oscar® Louie Psihoyos juntó
+            a un equipo de artista y activistas con la intención de mostrar al mundo imágenes, nunca antes vistas, que
+            exponen problemas acerca de la siguiente extinción masiva que se nos viene. Al final del documental uno no
+            puedo volver a las calles sin dejar de pensar en el aterrorizante hecho de que somos la ultima generación
+            que tiene la oportunidad de cambiar el curso de la historia. Para evitar esta siguiente extinción masiva
+            témenos que comenzar ahora porque a las generaciones venideras se les será muy tarde para evitar esa
+            catástrofe. Este documental si que me hizo pensar y darme cuenta que estamos arruinando el único lugar que
+            podemos llamar nuestro hogar. Mi grano de arena para este proyecto fue ilustrar algunas de las miles
+            especies que dejaran de existir.
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <h2 class="title">Créditos</h2>
+          <p>
+            Directora Creativa: Janet Daniel, <br />
+            Directora Creativa Junior: Beth Stewart, <br />
+            Productora de Fotos: Susan Wetherby, <br />
+            Redactor: Shaun Gholston, <br />
+            Diseñador: Peter Verastegui
+          </p>
+        </div>
+      </div>
+    </div>
+    <section data-midnight="dark">
+      <div class="container bottom_60">
+        <!-- Images -->
+        <div class="row lightbox-gallery">
+          <!-- a image -->
+          <div class="col-lg-12 bottom_60">
+            <div class="image">
+              <img class="round-corners" src="/img/works/work-3/Paradise-Flycatcher-1.png" alt="" />
+            </div>
+          </div>
+          <!-- a image -->
+          <div class="col-lg-12 bottom_60">
+            <div class="image">
+              <img class="round-corners" class="round-corners" src="/img/works/work-3/Gibbon.jpg" alt="" />
+            </div>
+          </div>
+          <!-- a image -->
+          <div class="col-lg-12 bottom_60">
+            <div class="image">
+              <img class="round-corners" src="/img/works/work-3/Cheetah.png" alt="" />
+            </div>
+          </div>
+          <!-- a image -->
+          <div class="col-lg-12">
+            <div class="image">
+              <img class="round-corners" src="/img/works/work-3/Green-Turtle.png" alt="" />
+            </div>
           </div>
         </div>
-        <!-- a image -->
-        <div class="col-lg-6">
-          <div class="image">
-            <img src="img/works/work-5/Poster-Gallo-Guapo-Restaurant-1.jpg" alt="Poster Design">
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="image">
-            <img src="img/works/work-5/Stationary-Group-Restaurant-Gallo-Guapo.jpg" alt="Branding on stationary">
-          </div>
-        </div>
-
-        <!-- a image -->
-        <div class="col-lg-12">
-          <div class="image">
-            <img src="img/works/work-5/LOGO-Signature-Gallo-Guapo-Restaurant.jpg" alt="Logo">
-          </div>
-        </div>
-        <!-- a image -->
-
-        <!-- a image -->
-        <div class="col-lg-6">
-          <div class="image">
-            <img src="img/works/work-5/Apron-Restaurant-Gallo-Guapo-1.jpg" alt="Apron Branding">
-          </div>
-        </div>
-        <!-- a image -->
-
-
-        <!-- a image -->
-        <div class="col-lg-6">
-          <div class="image">
-            <img src="img/works/work-5/Poster-Gallo-Guapo-Restaurant-2.jpg" alt="Poster Design">
-          </div>
-        </div>
-
-        <!-- a image -->
-        <div class="col-lg-12">
-          <div class="image">
-            <img src="img/works/work-5/Wall-Gallo-Guapo-Restaurant.jpg" alt="Restaurant Branding">
-          </div>
-        </div>
-        <!-- a image -->
-
-        <!-- a image -->
-        <div class="col-lg-12">
-          <div class="image">
-            <img src="img/works/work-5/Foodtruck-Back-GalloGuapo.jpg" alt="Food truck branding">
-          </div>
-        </div>
-        <div class="col-lg-12">
-          <div class="image">
-            <img src="img/works/work-5/Stationary-restaurant-gallo-guapo.jpg" alt="All branded items">
-          </div>
-        </div>
-        <!-- a image -->
       </div>
     </section>
+    <!-- project-detail end -->
+    <!-- ======= portfolio carousel | Start ======= -->
+    <section data-midnight="white" class="lightgrey-bg">
+      <div class="owl-carousel owl-theme portfolio-carousel col-lg-8 offset-lg-2" data-autoplay="true" data-nav="false"
+        data-dots="true" data-items-desktop="1" data-items-desktop-small="1" data-items-tablet="1"
+        data-items-tablet-small="1">
+        <div class="item lightgrey-bg">
+          <img class="mutiply-blend-mode" src="/img/works/work-3/Gibbons.jpg" alt="" />
+        </div>
+        <div class="item lightgrey-bg">
+          <img class="mutiply-blend-mode" src="/img/works/work-3/Green-Turtle.jpg" alt="" />
+        </div>
+        <div class="item lightgrey-bg">
+          <img class="mutiply-blend-mode" src="/img/works/work-3/Paradise-Flycatcher.jpg" alt="" />
+        </div>
+      </div>
+    </section>
+    <!-- ======= portfolio carousel | End ======= -->
 
-    <section class="white-bg">
+    <section class="white-bg" data-midnight="white">
       <div class="col-lg-12 text-center">
-        <a class="next-link" href="es-UI-UX-Illustrations.html">
+        <a class="next-link" href="es-Gallo-Guapo.html">
           <div class="nav-title">Siguiente</div>
-          <div class="next-title">UI/UX ilustración de personajes</div>
+          <div class="next-title">Gallo Guapo</div>
         </a>
       </div>
-
     </section>
 
     <!-- footer -->
@@ -218,16 +238,11 @@
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-          </div>
           <div class="col-lg-2 bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
@@ -238,21 +253,16 @@
       </div>
       </div>
     </footer>
-
   </main>
 
-
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
   </script>
-
-
-
 </body>
 
 </html>
