--- a/html/spanish/Storytelling-Bootcamp.html
+++ b/html/spanish/Storytelling-Bootcamp.html
@@ -13,7 +13,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,10 +21,10 @@
 <![endif]-->
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="img/favico.ico">
+    <link rel="shortcut icon" href="/img/favico.ico">
 
     <!-- Font icons -->
-    <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -58,7 +58,7 @@
         <!-- HEADER
 ================================================== -->
         <header>
-            <a href="es.html" class="logo float-left"></a>
+            <a href="/html/spanish/home.html" class="logo float-left"></a>
             <div class="menu float-right">
                 <div class="nav-icon">
                     <span></span>
@@ -80,16 +80,16 @@
                             <a href="https://peterverastegui.wordpress.com/">Blog</a>
                         </li>
                         <li class="scroll">
-                            <a href="es.html#about">Acerca de mi</a>
+                            <a href="/html/spanish/home.html#about">Acerca de mi</a>
                         </li>
                         <li class="scroll">
-                            <a href="es.html#resume">Currículum Vitae</a>
+                            <a href="/html/spanish/home.html#resume">Currículum Vitae</a>
                         </li>
                         <li class="scroll">
                             <a href="#contact">Contacto</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html">Website in English</a>
+                            <a href="/html/english/home.html">English</a>
                         </li>
                     </ul>
                 </div>
@@ -125,7 +125,8 @@
                 </svg>
             </div>
             <div class="hero-image"
-                style="background-image: url(img/works/work-4/Dave-McAloney-for-nationalgeographic-2401211.png);"></div>
+                style="background-image: url(/img/works/work-4/Dave-McAloney-for-nationalgeographic-2401211.png);">
+            </div>
         </div>
 
 
@@ -162,14 +163,14 @@
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark">
             <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0"
-                src="img/works/work-4/Badges-STORYTELLING-BOOTCAMP.png" alt="Badges">
+                src="/img/works/work-4/Badges-STORYTELLING-BOOTCAMP.png" alt="Badges">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark">
             <img class="img-fluid col align-self-center pr-0 pl-0"
-                src="img/works/work-4/Email-evite-Storytelling-Bootcamp.png" alt="New elements">
+                src="/img/works/work-4/Email-evite-Storytelling-Bootcamp.png" alt="New elements">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
@@ -180,13 +181,13 @@
                 data-nav="false" data-dots="true" data-items-desktop="1" data-items-desktop-small="1"
                 data-items-tablet="1" data-items-tablet-small="1">
                 <div class="item">
-                    <img src="img/works/work-4/Leave-behind-01.png" alt="">
+                    <img src="/img/works/work-4/Leave-behind-01.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="img/works/work-4/Leave-behind-02.png" alt="">
+                    <img src="/img/works/work-4/Leave-behind-02.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="img/works/work-4/Leave-behind-04.png" alt="">
+                    <img src="/img/works/work-4/Leave-behind-04.png" alt="">
                 </div>
             </div>
         </section>
@@ -194,14 +195,14 @@
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark" class="img-fluid">
-            <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0" src="img/works/work-4/one-page-Bio.jpg"
+            <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0" src="/img/works/work-4/one-page-Bio.jpg"
                 alt="">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
 
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark" class="img-fluid">
-            <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0" src="img/works/work-4/one-page-Bio-2.jpg"
+            <img class="img-fluid bottom_15 col align-self-center pr-0 pl-0" src="/img/works/work-4/one-page-Bio-2.jpg"
                 alt="Letterhead">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
@@ -209,7 +210,7 @@
         <!-- ======= Full Screen Image  / Start ========== -->
         <div data-midnight="dark">
             <img class="img-fluid col align-self-center pr-0 pl-0"
-                src="img/works/work-4/Top-10-tips-STORYTELLING-BOOTCAMP.png" alt="Take aways">
+                src="/img/works/work-4/Top-10-tips-STORYTELLING-BOOTCAMP.png" alt="Take aways">
         </div>
         <!-- ======= Full Screen Image  / End ========== -->
         <!--Next-->
@@ -260,9 +261,9 @@
 
 
     <!-- Javascripts -->
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
     <script type="text/javascript">
         var currentYear = new Date().getFullYear();
         document.getElementById("copyYear").innerHTML = currentYear;
