--- a/html/spanish/UI-UX-Illustrations.html
+++ b/html/spanish/UI-UX-Illustrations.html
@@ -13,7 +13,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,10 +21,10 @@
 <![endif]-->
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="img/favico.ico">
+    <link rel="shortcut icon" href="/img/favico.ico">
 
     <!-- Font icons -->
-    <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -58,7 +58,7 @@
         <!-- HEADER
 ================================================== -->
         <header>
-            <a href="es.html" class="logo float-left"></a>
+            <a href="/html/spanish/home.html" class="logo float-left"></a>
             <div class="menu float-right">
                 <div class="nav-icon">
                     <span></span>
@@ -80,16 +80,16 @@
                             <a href="https://peterverastegui.wordpress.com/">Blog</a>
                         </li>
                         <li class="scroll">
-                            <a href="es.html#about">Acerca de mi</a>
+                            <a href="/html/spanish/home.html#about">Acerca de mi</a>
                         </li>
                         <li class="scroll">
-                            <a href="es.html#resume">Currículum Vitae</a>
+                            <a href="/html/spanish/home.html#resume">Currículum Vitae</a>
                         </li>
                         <li class="scroll">
                             <a href="#contact">Contacto</a>
                         </li>
                         <li class="scroll">
-                            <a href="home.html">Website in English</a>
+                            <a href="/html/english/home.html">English</a>
                         </li>
                     </ul>
                 </div>
@@ -134,7 +134,7 @@
                 </svg>
             </div>
             <div class="hero-image"
-                style="background-image: url(img/works/UI-UX-Illustration/UI-UX-Illustrations-Hero-Image.png);">
+                style="background-image: url(/img/works/UI-UX-Illustration/UI-UX-Illustrations-Hero-Image.png);">
             </div>
         </div>
         <!-- Hero Section - End
@@ -166,43 +166,43 @@
                     <!-- a image -->
                     <div class="col-lg-12 bottom_60">
                         <div class="image">
-                            <img class="round-corners" class="round-corners" src="img/works/UI-UX-Illustration/U-UI.png"
-                                alt="User Experience Illustration" />
+                            <img class="round-corners" class="round-corners"
+                                src="/img/works/UI-UX-Illustration/U-UI.png" alt="User Experience Illustration" />
                         </div>
                     </div>
                     <!-- a image -->
                     <div class="col-lg-12 bottom_60">
                         <div class="image">
-                            <img class="round-corners" class="round-corners" src="img/works/UI-UX-Illustration/X-UX.png"
-                                alt="User Experience Illustration" />
+                            <img class="round-corners" class="round-corners"
+                                src="/img/works/UI-UX-Illustration/X-UX.png" alt="User Experience Illustration" />
                         </div>
                     </div>
                     <!-- a image -->
                     <div class="col-lg-12 bottom_60">
                         <div class="image">
-                            <img class="round-corners" class="round-corners" src="img/works/UI-UX-Illustration/I-UI.png"
-                                alt="User Experience Illustration" />
+                            <img class="round-corners" class="round-corners"
+                                src="/img/works/UI-UX-Illustration/I-UI.png" alt="User Experience Illustration" />
                         </div>
                     </div>
                     <!-- a image -->
                     <div class="col-lg-12">
                         <div class="image  bottom_60">
-                            <img class="round-corners" class="round-corners" src="img/works/UI-UX-Illustration/U-UX.png"
-                                alt="User Experience Illustration" />
+                            <img class="round-corners" class="round-corners"
+                                src="/img/works/UI-UX-Illustration/U-UX.png" alt="User Experience Illustration" />
                         </div>
                     </div>
 
                     <!-- a image -->
                     <div class="col-lg-12 bottom_60">
                         <div class="image">
-                            <img class="round-corners" src="img/works/UI-UX-Illustration/UI.png"
+                            <img class="round-corners" src="/img/works/UI-UX-Illustration/UI.png"
                                 alt="User Interface Illustration" />
                         </div>
                     </div>
                     <!-- a image -->
                     <div class="col-lg-12">
                         <div class="image">
-                            <img class="round-corners" class="round-corners" src="img/works/UI-UX-Illustration/UX.png"
+                            <img class="round-corners" class="round-corners" src="/img/works/UI-UX-Illustration/UX.png"
                                 alt="User Experience Illustration" />
                         </div>
                     </div>
@@ -254,9 +254,9 @@
     </main>
 
     <!-- Javascripts -->
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
     <script type="text/javascript">
         var currentYear = new Date().getFullYear();
         document.getElementById("copyYear").innerHTML = currentYear;
