--- a/html/spanish/USA-Today.html
+++ b/html/spanish/USA-Today.html
@@ -13,7 +13,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 
   <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,10 +21,10 @@
 <![endif]-->
 
   <!-- FAVICON -->
-  <link rel="shortcut icon" href="img/favico.ico">
+  <link rel="shortcut icon" href="/img/favico.ico">
 
   <!-- Font icons -->
-  <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+  <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -58,7 +58,7 @@
     <!-- HEADER
 ================================================== -->
     <header>
-      <a href="es.html" class="logo float-left"></a>
+      <a href="/html/spanish/home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -80,16 +80,16 @@
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="es.html#about">Acerca de mi</a>
+              <a href="/html/spanish/home.html#about">Acerca de mi</a>
             </li>
             <li class="scroll">
-              <a href="es.html#resume">Currículum Vitae</a>
+              <a href="/html/spanish/home.html#resume">Currículum Vitae</a>
             </li>
             <li class="scroll">
               <a href="#contact">Contacto</a>
             </li>
             <li class="scroll">
-              <a href="home.html">Website in English</a>
+              <a href="/html/english/home.html">English</a>
             </li>
           </ul>
         </div>
@@ -131,7 +131,7 @@
             style="fill: none; stroke: #f2f2f2; stroke-width: 20px;" />
         </svg>
       </div>
-      <div class="hero-image" style="background-image: url(img/works/work-1/work-1-bkgrd.jpg);"></div>
+      <div class="hero-image" style="background-image: url(/img/works/work-1/work-1-bkgrd.jpg);"></div>
     </div>
     <!-- Hero Section - End
 ================================================== -->
@@ -180,7 +180,7 @@
             <!-- a image -->
             <div class="col-lg-10 offset-lg-1">
               <div class="image">
-                <img src="img/works/work-1/Colors-National-Market.png" alt="Colors" />
+                <img src="/img/works/work-1/Colors-National-Market.png" alt="Colors" />
               </div>
             </div>
           </div>
@@ -193,7 +193,7 @@
 
     <div data-midnight="white" class="row lightbox-gallery">
       <div class="image">
-        <img src="img/works/work-1/City-Map-Local-Element.png" alt="city map" />
+        <img src="/img/works/work-1/City-Map-Local-Element.png" alt="city map" />
       </div>
     </div>
     <!-- One Column - centered image bleeding - full screen | End  -->
@@ -202,7 +202,7 @@
     <section data-midnight="dark" class="usatoday-blue">
       <div class="lightbox-gallery container">
         <div class="image col-lg-4 offset-lg-4 col-sm-6 offset-sm-3">
-          <img src="img/works/work-1/Linear-Elements.png" alt="New elements" />
+          <img src="/img/works/work-1/Linear-Elements.png" alt="New elements" />
         </div>
       </div>
     </section>
@@ -265,18 +265,18 @@
       <!-- project-detail Two Columns | Start -->
       <div class="lightbox-gallery row no-gutter">
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-National-Intro-1080x1080-Opener.jpg"
+          <img class="round-corners" src="/img/works/work-1/USATODAY-National-Intro-1080x1080-Opener.jpg"
             alt="New elements" />
         </div>
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-National-Name-Title-1080x1080.jpg"
+          <img class="round-corners" src="/img/works/work-1/USATODAY-National-Name-Title-1080x1080.jpg"
             alt="New elements" />
         </div>
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-National-Audio-1080x1080.jpg" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/USATODAY-National-Audio-1080x1080.jpg" alt="New elements" />
         </div>
         <div class="image col-lg-3">
-          <img class="round-corners" src="img/works/work-1/USATODAY-National-Text-Boxes-1080x1080.jpg"
+          <img class="round-corners" src="/img/works/work-1/USATODAY-National-Text-Boxes-1080x1080.jpg"
             alt="New elements" />
         </div>
       </div>
@@ -285,17 +285,17 @@
       <!-- project-detail Two Columns | Start -->
       <div class="row lightbox-gallery no-gutter top_15">
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-Local-Intro-1080x1080.png" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/USATODAY-Local-Intro-1080x1080.png" alt="New elements" />
         </div>
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-Local-Outroa-1080x1080.png" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/USATODAY-Local-Outroa-1080x1080.png" alt="New elements" />
         </div>
         <div class="image col-lg-3 bottom_15">
-          <img class="round-corners" src="img/works/work-1/USATODAY-National-Outro-1080x10800-2.png"
+          <img class="round-corners" src="/img/works/work-1/USATODAY-National-Outro-1080x10800-2.png"
             alt="New elements" />
         </div>
         <div class="image col-lg-3">
-          <img class="round-corners" src="img/works/work-1/USATODAY-Local-NameTitle-1080x10802.jpg"
+          <img class="round-corners" src="/img/works/work-1/USATODAY-Local-NameTitle-1080x10802.jpg"
             alt="New elements" />
         </div>
       </div>
@@ -316,7 +316,7 @@
             <!-- a image -->
             <div class="col-lg-12">
               <div class="image">
-                <img src="img/works/work-1/Video-Structure-2.png" alt="Colors" />
+                <img src="/img/works/work-1/Video-Structure-2.png" alt="Colors" />
               </div>
             </div>
           </div>
@@ -332,7 +332,7 @@
           <!-- a image -->
           <div class="col-lg-12">
             <div class="image">
-              <img src="img/works/work-1/Social-media-grid.png" alt="grid" />
+              <img src="/img/works/work-1/Social-media-grid.png" alt="grid" />
             </div>
           </div>
         </div>
@@ -344,13 +344,13 @@
       <!-- Three colums - one row | Start -->
       <div class="row lightbox-gallery no-gutter">
         <div class="image col-lg-4 bottom_15">
-          <img class="round-corners" src="img/works/work-1/Outro-options-2.gif" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/Outro-options-2.gif" alt="New elements" />
         </div>
         <div class="image col-lg-4 bottom_15">
-          <img class="round-corners" src="img/works/work-1/Outro-option-5.gif" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/Outro-option-5.gif" alt="New elements" />
         </div>
         <div class="image col-lg-4 bottom_15">
-          <img class="round-corners" src="img/works/work-1/Outro-option-3.gif" alt="New elements" />
+          <img class="round-corners" src="/img/works/work-1/Outro-option-3.gif" alt="New elements" />
         </div>
       </div>
     </div>
@@ -361,7 +361,7 @@
     </section>
 
     <div data-midnight="white">
-      <img class="img-fluid col align-self-center p-0" src="img/works/work-1/Social-Video-Styleguide.png"
+      <img class="img-fluid col align-self-center p-0" src="/img/works/work-1/Social-Video-Styleguide.png"
         alt="Social video styleguide" />
     </div>
 
@@ -384,16 +384,11 @@
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
-            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
-          </div>
           <div class="col-lg-2 bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
@@ -406,9 +401,9 @@
     </footer>
   </main>
   <!-- Javascripts -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/plugins.js"></script>
+  <script src="/js/main.js"></script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
