--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/css/swiper.min.css">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -21,10 +21,10 @@
 <![endif]-->
 
     <!-- FAVICON -->
-    <link rel="shortcut icon" href="img/favico.ico">
+    <link rel="shortcut icon" href="/img/favico.ico">
 
     <!-- Font icons -->
-    <link rel="stylesheet" href="icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
+    <link rel="stylesheet" href="/icon-fonts/fontawesome-5.0.6/css/fontawesome-all.min.css" />
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -59,10 +59,10 @@
 
         <div class="container">
             <div class="col-lg-4 offset-lg-4 col-sm-4 offset-sm-4 image top_90 bottom_30">
-                <img src="img/logo-green.svg" alt="Logo">
+                <img src="/img/logo-green.svg" alt="Logo">
             </div>
             <div lang="en" class="text-center load-more top_60 wow fadeInUp" data-wow-delay="0.2s">
-                <a href="home.html">
+                <a href="/html/english/home.html">
                     <button data-key="btn-ux" class="site-btn" data-tilt>DESIGN (Ixd)
                     </button>
                 </a>
@@ -108,6 +108,11 @@
                     <div class="social-icons col-lg-8 offset-lg-2 bottom_45">
                         <div class="top_15  bottom_45">
                             <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
+                                    aria-hidden="true"></i> </a>&nbsp; &nbsp;&nbsp; &nbsp;
+                            <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin"
+                                    aria-hidden="true"></i> </a>
+                            &nbsp; &nbsp;&nbsp; &nbsp;
+                            <a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
                                     aria-hidden="true"></i> </a>
                         </div>
                     </div>
@@ -125,9 +130,9 @@
     </main>
 
     <!-- Javascripts -->
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
     <script type="text/javascript">
         var currentYear = new Date().getFullYear();
         document.getElementById("copyYear").innerHTML = currentYear;
